--- a/data/feats/class-06-0zSoSPwC4cpqRewj.htm
+++ b/data/feats/class-06-0zSoSPwC4cpqRewj.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You learn the song of marching composition cantrip (page 228), which enables you and your allies to cross vast distances without strain.
-Avantage: Vous apprenez le cantrip de composition de marche (page 228), qui vous permet, ainsi qu'à vos alliés, de traverser de vastes distances sans effort.
+Avantage: Vous apprenez le tour de magie de composition Chanson de marche.
 
 ------ Description (en) ------
 <p>You learn the @Compendium[pf2e.spells-srd.LTUaK3smfm5eDiFK]{Song of Marching} composition cantrip, which enables you and your allies to cross vast distances without strain.</p>
