--- a/data/feats/class-06-1YFrl8I6ZGo7BIM9.htm
+++ b/data/feats/class-06-1YFrl8I6ZGo7BIM9.htm
@@ -1,10 +1,12 @@
 Name: Knight Vigilant Dedication
-Nom: Chevalier vigilant
+Nom: Dévouement de Chevalier vigilant
 PrereqEN: trained in Religion|any good alignment|member of the Knights of Lastwall of knight rank
-Avantage: Vous êtes dévoué à la cause des Sentinelles étincelantes. Vous devenez expert dans la compétence Religion.
 PrereqFR: qualifié en Religion|n'importe que alignement Bon|membre des Chevaliers de Dernier Rempart au rang de Chevalier
-État: changé
-État d'origine: libre
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous êtes expert en Religion et fournissez un meilleur abri à vos alliés.
 
 ------ Description (en) ------
 <p>You are dedicated to the cause of the Shining Sentinels. You gain expert proficiency in Religion. When you are between an ally and a foe and would provide lesser cover to your ally against the foe's attacks, you twist to become even more obtrusive, providing standard cover instead.</p>
