--- a/data/feats/class-06-2HoDwBAmPIAoKUVF.htm
+++ b/data/feats/class-06-2HoDwBAmPIAoKUVF.htm
@@ -2,12 +2,11 @@ Name: Dazing Blow
 Nom: Coup étourdissant
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You pummel a held foe, hoping to stagger them.
-Avantage: Vous rouez de coups un adversaire tenu, en espérant l'assommer.
+Avantage: Vous pouvez tenter d'assommer les adversaires que vous avez attrapés.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have a creature @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Grabbed}.</p>
@@ -22,9 +21,9 @@ Avantage: Vous rouez de coups un adversaire tenu, en espérant l'assommer.
 <p><strong>Conditions</strong> Vous @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Agrippez/empoignez} une créature.</p>
 <hr />
 <p>Vous rouez de coups un adversaire tenu, en espérant l'assommer.</p>
-<p>Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de mêlée contre une crature que vous empoignez. Les dégâts de l'armee de cette Frappe sont des dégâts contondants. Si la frappe touche, la créature doit effectuer un jet de Vigueur contre votre DD de classe ; c'est un effet de mise hors combat.</p>
+<p>Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} au corps-à-corps contre une crature que vous avez empoignée. Les dégâts de l'arme de cette Frappe sont des dégâts contondants. Si la frappe touche, la créature doit effectuer un jet de Vigueur contre votre DD de classe ; c'est un effet de mise hors combat.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
-<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Etourdie} 1.</p>
-<p><strong>Échec</strong> La créature est étourdie 2.</p>
-<p><strong>Échec critique</strong> La créature est étourdie 3.</p>
+<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdie} 1.</p>
+<p><strong>Échec</strong> La créature est Étourdie 2.</p>
+<p><strong>Échec critique</strong> La créature est Étourdie 3.</p>
