--- a/data/feats/class-06-5N6rLz4mdJg0NrQH.htm
+++ b/data/feats/class-06-5N6rLz4mdJg0NrQH.htm
@@ -6,11 +6,11 @@ PrereqFR: expert en Discrétion
 
 ------ Benefits and spoiler ----
 Benefits: Using your extensive knowledge of ambush tactics, you keep watch for any hidden creatures or dangerous sites, moving at half your travel speed.
-Avantage: Grâce à votre connaissance approfondie des tactiques d'embuscade, vous surveillez les créatures cachées ou les sites dangereux, en vous déplaçant à la moitié de votre vitesse de déplacement.
+Avantage: Vous lancez Perception contre la Discrétion de vos ennemis -2 pour l'initiative en cas d'embuscade anticipée.
 
 ------ Description (en) ------
 <p>Using your extensive knowledge of ambush tactics, you keep watch for any hidden creatures or dangerous sites, moving at half your travel speed.</p>
 <p>If you're Anticipating an Ambush at the start of an encounter, you roll a Perception check for initiative, and all enemies rolling Stealth for initiative take a -2 circumstance penalty to their Stealth checks.</p>
 ------ Description (fr) ------
 <p>En utilisant votre connaissance extensive des tactiques d'embuscade, vous gardez un œil pour toute créature cachée ou site dangereux, en vous déplaçant à la moitié de votre vitesse de voyage.</p>
-<p>Si vous anticipez une embuscade au début d'une renncontre, vous lancez un test de Perception pour votre initiative et tous les ennemis lancent un test de Discrétion pour l'initiative et subissent une pénalité circonstance de –2 à leurs tests de Discrétion.</p>
+<p>Si vous anticipez une embuscade au début d'une rencontre, vous lancez un test de Perception pour votre initiative et tous les ennemis lancent un test de Discrétion pour l'initiative et subissent une pénalité de circonstances de –2 à leurs tests de Discrétion.</p>
