--- a/data/feats/class-06-6gLWr3xghsHSFwxc.htm
+++ b/data/feats/class-06-6gLWr3xghsHSFwxc.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can Stride across liquid and surfaces that don’t support your weight.
-Avantage: Vous pouvez marcher sur des liquides et des surfaces qui ne supportent pas votre poids.
+Avantage: Vous pouvez passer sur des surfaces liquides sans vous y arrêter.
 
 ------ Description (en) ------
 <p>You can Stride across liquid and surfaces that don't support your weight. This benefit lasts only during your movement. If you end your movement on a surface that can't support you, you fall in or it collapses as normal.</p>
