--- a/data/feats/class-06-0UdHPOv3DX8TY9yb.htm
+++ b/data/feats/class-06-0UdHPOv3DX8TY9yb.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’ve learned to react with ranged weapons when a creature is in close quarters.
-Avantage: Vous avez appris à réagir avec des armes à distance lorsqu'une créature se trouve à proximité.
+Avantage: En cas de réaction, vous pouvez Frapper avec une arme à distance au lieu d'une arme au corps-à-corps contre une cible adjacente.
 
 ------ Description (en) ------
 <p>You've learned to react with ranged weapons when a creature is in close quarters. You can use a reaction that normally allows you to make a melee weapon Strike to instead make a ranged weapon Strike. You must be Striking an adjacent target. If necessary for the reaction's trigger, you treat your ranged weapon as if it had a reach of 5 feet. If the reaction has other requirements, such as wielding a specific kind of weapon, Snap Shot doesn't allow you to ignore them; it allows you only to replace a melee weapon Strike with a ranged weapon Strike.</p>
