--- a/data/feats/class-06-1p5ErCp33nGOzEsk.htm
+++ b/data/feats/class-06-1p5ErCp33nGOzEsk.htm
@@ -2,12 +2,11 @@ Name: Disarming Stance
 Nom: Posture désarmante
 PrereqEN: trained in Athletics
 PrereqFR: qualifié en Athlétisme
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You adopt a fencing stance that improves your control over your weapon.
-Avantage: Grâce à une posture d'escrime, vous améliorez le contrôle de votre arme.
+Avantage: Vous améliorez votre capacité à Désarmer.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding only a single one-handed melee weapon and have your other hand or hands free.</p>
@@ -19,3 +18,4 @@ Avantage: Grâce à une posture d'escrime, vous améliorez le contrôle de votre
 <p><strong>Conditions</strong> Vous maniez une seule arme de corps à corps à une main et votre autre main (ou mains) est libre.</p>
 <hr />
 <p>Vous prenez une posture d’escrime vous permettant d’améliorer le contrôle de votre arme. Quand vous gardez cette posture, vous bénéficiez d’un bonus de circonstances de +1 aux tests d’Athlétisme pour @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmer} et d’un bonus de circonstances de +1 à vos jets de Réflexes quand vous vous défendez contre les tests pour vous Désarmer. De plus, vous pouvez tenter de Désarmer les créatures jusqu’à deux catégories de taille maximum de plus que vous.</p>
+<p>@Compendium[pf2e.feat-effects.LxSev4GNKv26DbZw]{Posture: Posture désarmante}</p>
