--- a/data/feats/class-06-3PHHiZjX16Dwyt65.htm
+++ b/data/feats/class-06-3PHHiZjX16Dwyt65.htm
@@ -6,7 +6,7 @@ PrereqFR: Attaque sournoise 2d6
 
 ------ Benefits and spoiler ----
 Benefits: Your knowledge of a creature's physiology and understanding of tactics helps you attack with pinpoint accuracy.
-Avantage: Votre connaissance de la physiologie d’une créature et votre compréhension des tactiques vous aident à attaquer avec une précision extrême.
+Avantage: Réussir à Vous souvenir vous aide à infliger davantage dégâts d'attaque sournoise supplémentaires à votre prochaine Frappe.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You must have identified a creature with <br />@Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Recall Knowledge}.</p>
