--- a/data/feats/class-06-3vjOXL9ZD4ibaJL6.htm
+++ b/data/feats/class-06-3vjOXL9ZD4ibaJL6.htm
@@ -6,7 +6,7 @@ PrereqFR: ordre de la feuille
 
 ------ Benefits and spoiler ----
 Benefits: You can communicate with plants on a basic level and use Diplomacy to Make an Impression on them and to make very simple Requests of them.
-Avantage: Vous communiquez de manière rudimentaire avec les plantes.
+Avantage: Vous communiquez de manière rudimentaire avec les plantes et pouvez utiliser la Diplomatie.
 
 ------ Description (en) ------
 <p>You can communicate with plants on a basic level and use Diplomacy to Make an Impression on them and to make very simple Requests of them. Non-creature plants typically can't fulfill most requests you might ask of them unless you have access to other magic such as speak with plants.</p>
