--- a/data/feats/class-06-4I1Kq53Qfzrrmg2E.htm
+++ b/data/feats/class-06-4I1Kq53Qfzrrmg2E.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your feet and weapon move in tandem.
-Avantage: Vos pieds et votre arme bougent en tandem.
+Avantage: Vous Frappez et faites un Pas et vice-versa.
 
 ------ Description (en) ------
 <p>Your feet and weapon move in tandem. Either Step and then Strike, or Strike and then Step.</p>
