--- a/data/feats/class-06-4o9g5g12yyrfZ3Xd.htm
+++ b/data/feats/class-06-4o9g5g12yyrfZ3Xd.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You aren’t bothered by tricky footing.
-Avantage: Vous n'êtes pas gêné par un pied délicat.
+Avantage: Vous ignorez le terrain difficile.
 
 ------ Description (en) ------
 <p>You aren't bothered by tricky footing. When you Stride or Step, you can ignore difficult terrain.</p>
