--- a/data/feats/class-06-5Jc2ySGLVi053qpz.htm
+++ b/data/feats/class-06-5Jc2ySGLVi053qpz.htm
@@ -2,12 +2,11 @@ Name: Twist the Knife
 Nom: Remuer le couteau
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: After stabbing your opponent in a weak spot, you tear the wound open.
-Avantage: Vous avez trouvé le point faible de votre adversaire. Vous infligez des dégâts de saignement.
+Avantage: En cas d'attaque sournoise, vous infligez des dégâts de saignement persistants égaux au nombre de dés de dégâts d’attaque sournoise.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> Your last action was a melee Strike that dealt sneak attack damage to a @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} target</p>
