--- a/data/feats/class-06-5vXc2s2siR1ihpBT.htm
+++ b/data/feats/class-06-5vXc2s2siR1ihpBT.htm
@@ -4,6 +4,10 @@ PrereqEN: shield block
 PrereqFR: Blocage au bouclier
 État: officielle
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Blocage au bouclier vous permet de protéger un allié adjacent.
+
 ------ Description (en) ------
 <p>You use your shield to protect your allies as well as yourself. When you have a shield raised, you can use your Shield Block reaction when an attack is made against an ally adjacent to you. If you do, the shield prevents that ally from taking damage instead of preventing you from taking damage, following the normal rules for Shield Block.</p>
 ------ Description (fr) ------
