--- a/data/feats/class-06-6iDd7CTzxkvMp6lB.htm
+++ b/data/feats/class-06-6iDd7CTzxkvMp6lB.htm
@@ -6,7 +6,7 @@ PrereqFR: sorts ki
 
 ------ Benefits and spoiler ----
 Benefits: The power of your ki soothes your wounds and energizes you for battle.
-Avantage: La puissance de ton ki apaise tes blessures et te donne de l'énergie pour le combat.
+Avantage: Vous regagnez des Points de vie en lançant des sorts avec le trait moine.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
