--- a/data/feats/class-06-6J2ZSGNsXPKPcJGV.htm
+++ b/data/feats/class-06-6J2ZSGNsXPKPcJGV.htm
@@ -2,20 +2,18 @@ Name: Tiger Slash
 Nom: Taillade du tigre
 PrereqEN: |Tiger Stance
 PrereqFR: Posture du tigre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You make a fierce swipe with both hands.
-Avantage: Vous lacérez violemment votre adversaire.
------- Benefits and spoiler ----
-Avantage: Vous lacérez violemment votre adversaire.
+Avantage: Votre Frappe de griffe de tigre inflige plus de dégâts et Pousse votre adversaire.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are in @Compendium[pf2e.feats-srd.VCjAlOvjNvFJOsG5]{Tiger Stance}</p>
 <hr />
 <p>You make a fierce swipe with both hands. Make a tiger claw Strike. It deals two extra weapon damage dice (three extra dice if you're 14th level or higher), and you can push the target 5 feet away as if you had successfully @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Shoved} them.</p>
 <p>If the attack is a critical success and deals damage, add your Strength modifier to the persistent bleed damage from your tiger claw.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous êtes dans la Posture du tigre</p>
+<p><strong>Conditions</strong> Vous êtes dans la @Compendium[pf2e.feats-srd.VCjAlOvjNvFJOsG5]{Posture du tigre}</p>
 <hr />
-<p>Vous lacérez violemment avec vos deux mains. Faites une Frappe de griffe de tigre. Elle inflige deux dés de dégâts d’arme supplémentaires (trois si vous êtes de niveau 14 ou plus) et vous pouvez repousser la cible de 1,50 mètres comme si vous aviez réussi à la Pousser. Si l’attaque est un succès critique et inflige des dégâts, ajoutez votre modificateur de Force aux dégâts de saignement persistants de votre griffe de tigre.</p>
+<p>Vous lacérez violemment avec vos deux mains. Faites une Frappe de griffe de tigre. Elle inflige deux dés de dégâts d’arme supplémentaires (trois si vous êtes de niveau 14 ou supérieur) et vous pouvez repousser la cible de 1,50 mètres comme si vous aviez réussi à la @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Pousser}. Si l’attaque est un coup critique et inflige des dégâts, ajoutez votre modificateur de Force aux dégâts de saignement persistants de votre griffe de tigre.</p>
