--- a/data/equipment/consumable-03-iNR6t5dDiYGQYTeA.htm
+++ b/data/equipment/consumable-03-iNR6t5dDiYGQYTeA.htm
@@ -8,7 +8,7 @@ Nom: Colle Rustine
 <p>Quickpatch glue is a fast-setting adhesive designed for rapid but temporary repairs.</p>
 <p>When applied to a broken item, the glue adheres the item's pieces back together. This does not restore the item's hit points, but it allows the item to be used for its normal function and removes the broken condition. The glue is fragile and degrades over time. An item repaired by quickpatch glue regains the broken condition after it takes damage or 1 hour passes (whichever comes first). In order to apply a new vial of quickpatch glue to or repair the item, the item's holder must first remove the glue residue, a process that requires 10 minutes of effort and a set of alchemist's tools.</p>
 ------ Description (fr) ------
-<p><strong>Activer</strong> 1 minute (Interagir)</p>
+<p><strong>Activation</strong> 1 minute (Interagir)</p>
 <hr />
 <p>La colle rustine est un adhésif à prise rapide conçu pour des réparations rapides mais temporaires.</p>
 <p>Lorsqu'elle est appliquée sur un article cassé, la colle fait adhérer les pièces de l'article pour les recoller. Cela ne rétablit pas les points de vie de l'objet, mais permet à l'objet d'être utilisé pour sa fonction normale et supprime l'état cassé. La colle est fragile et se dégrade avec le temps. Un objet réparé à l'aide de la colle rustine retrouve son état brisé après avoir subi des dégâts ou au bout d'une heure (selon ce qui arrive en premier). Afin d’appliquer une fois de plus la colle rustine à l’objet ou de le réparer, le détenteur de l’objet doit d’abord enlever les résidus de colle, un processus qui demande 10 minutes d’effort et un ensemble d’outils d’alchimiste.</p>
