dons de classe 06

--- a/data/feats/class-06-515N9nl9ChZwLWKR.htm
+++ b/data/feats/class-06-515N9nl9ChZwLWKR.htm
@@ -6,7 +6,7 @@ PrereqFR: Combattant (Muse de barde)|Inspiration Défensive
 
 ------ Benefits and spoiler ----
 Benefits: Like the storied heroes who persist in the face of overwhelming odds, you and your allies will hold the line.
-Avantage: Comme les héros légendaires qui persistent face à l'adversité, vous et vos alliés tiendrez la ligne.
+Avantage: Inspiration défensive vous permet ainsi qu'à vos alliés de lever votre bouclier.
 
 ------ Description (en) ------
 <p>Like the storied heroes who persist in the face of overwhelming odds, you and your allies will hold the line.</p>
