--- a/data/feats/class-06-52cygjzHfSD0YhEA.htm
+++ b/data/feats/class-06-52cygjzHfSD0YhEA.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’ve studied ways of overcoming the innate magical resistance that certain powerful creatures have.
-Avantage: Vous avez étudié les moyens de surmonter la résistance magique innée que possèdent certaines créatures puissantes.
+Avantage: Vous réduisez de 1 le bonus de statut des jets de sauvegarde contre vos sorts.
 
 ------ Description (en) ------
 <p>You've studied ways of overcoming the innate magical resistance that dragons, otherworldly beings, and certain other powerful creatures have. Any creature that has a status bonus to saving throws against magic reduces that bonus by 1 against your spells.</p>
