--- a/data/feats/class-06-65gjc5KE4ZRoocbi.htm
+++ b/data/feats/class-06-65gjc5KE4ZRoocbi.htm
@@ -2,14 +2,12 @@ Name: Abundant Step
 Nom: Pas chassé
 PrereqEN: |Incredible Movement|Ki Spells
 PrereqFR: déplacement extraordinaire|sorts ki
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can teleport yourself a short distance.
-Avantage: Vous pouvez vous téléporter sur une courte distance.
------- Benefits and spoiler ----
-Avantage: Vous pouvez vous téléporter sur une courte distance.
+Avantage: Vous obtenez le sort ki Pas chassé.
+
 ------ Description (en) ------
 <p>You can teleport yourself a short distance. You gain the @Compendium[pf2e.spells-srd.Az3PmWnlWSb5ELX9]{Abundant Step} ki spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
