--- a/data/feats/class-06-9CXQhg4YprPhqzoL.htm
+++ b/data/feats/class-06-9CXQhg4YprPhqzoL.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You tumble around your foes, expertly avoiding their reactions.
-Avantage: Vous tournez autour de vos ennemis, évitant habilement leurs réactions.
+Avantage: Un test d'Acrobaties contre un jet de Réflexes cous permet de vous déplacer sans déclencher de réaction.
 
 ------ Description (en) ------
 <p>You tumble around your foes, expertly avoiding their reactions. @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Stride} up to half your Speed and roll an Acrobatics check. Compare the result to the Reflex DC of each foe whose reach you began in or enter during the movement, in sequence.</p>
