--- a/data/feats/class-06-52QyoGaysrfBOy5H.htm
+++ b/data/feats/class-06-52QyoGaysrfBOy5H.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You forge a magical link with another creature, granting you awareness of that creature's condition and creating a conduit for spellcasting.
-Avantage: Vous forgez un lien magique avec une autre créature, ce qui vous permet de connaître l’état de cette créature et de créer un conduit pour la diffusion de sorts.
+Avantage: Vous forgez un lien magique avec une autre créature vous permettant de savoir où elle est et quelle condition l'affecte.
 
 ------ Description (en) ------
 <p>You forge a magical link with another creature, granting you awareness of that creature's condition and creating a conduit for spellcasting.</p>
@@ -14,6 +14,6 @@ Avantage: Vous forgez un lien magique avec une autre créature, ce qui vous perm
 <p><strong>Special</strong> This feat has the trait corresponding to the tradition of spells you cast (arcane, divine, occult, or primal).</p>
 ------ Description (fr) ------
 <p>Vous forgez un lien magique avec une autre créature, vous permettant d'être alerté de la condition de la créature et de créer un conduit pour l'incantation de vos sorts.</p>
-<p>Durant vos préparatifs quotidiens, vous pouvez désigner une créature volontaire comme votre fardeau. Vous êtes toujours alerté de la direction dans laquelle il se trouve par rapport à vous, de sa distance et de toute condition qui l'affecte. De plus, vous pouvez lancer des sorts avec une portée de contact sur votre fardeau à une portée de 9 m. Ces effets persistent jusqu'à vos prochains préparatifs quotidiens.</p>
+<p>Durant vos préparatifs quotidiens, vous pouvez désigner une créature volontaire comme votre fardeau. Vous êtes toujours alerté de la direction dans laquelle elle se trouve par rapport à vous, de sa distance et de toute condition qui l'affecte. De plus, vous pouvez lancer des sorts avec une portée de contact sur votre fardeau à une portée de 9 m. Ces effets persistent jusqu'à vos prochains préparatifs quotidiens.</p>
 <hr />
 <p><strong>Spécial</strong> Ce don possède le trait correspondant à la tradition des sorts que vous lancez (arcanique, divin, occulte ou primordial).</p>
