--- a/data/feats/class-06-9cHQua33V35JPE3U.htm
+++ b/data/feats/class-06-9cHQua33V35JPE3U.htm
@@ -6,7 +6,7 @@ PrereqFR: Connaisseur
 
 ------ Benefits and spoiler ----
 Benefits: You tweak the properties of your composition spell to convey a bit of your defensive knowledge.
-Avantage: Vous modifiez les propriétés de votre sort de composition pour transmettre un peu de vos connaissances défensives.
+Avantage: Vos alliés et vous-même profitant d'un sort de composition bénéficiez du bonus de circonstances du don Connaisseur.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An ally benefiting from one of your composition spells is subject to an effect with the auditory, illusion, linguistic, sonic, or visual trait.</p>
@@ -15,8 +15,8 @@ Avantage: Vous modifiez les propriétés de votre sort de composition pour trans
 <p>All allies affected by your composition spell gain your +1 circumstance bonus from Well-Versed until the start of your next turn. @Compendium[pf2e.feat-effects.WrWSieH9Acy6XuzV]{Effect: Educate Allies (Ally)}</p>
 <p>Teaching your allies also bolsters your own skills; your personal circumstance bonus from Well-Versed also increases to +2 until the start of your next turn. @Compendium[pf2e.feat-effects.KceTcamIZ4ZrQJLD]{Effect: Educate Allies (Self)}</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur</strong> Un allé qui bénéficie d'un de vos sorts de composition est sujet d'un effet avec les traits audible, illusion, linguistique, sonique ou visuel.</p>
+<p><strong>Déclencheur</strong> Un allié qui bénéficie d'un de vos sorts de composition est sujet d'un effet avec les traits audible, illusion, linguistique, sonique ou visuel.</p>
 <hr />
 <p>Vous ajustez les propriétés de votre sort de composition pour convoyer une parcelle de votre connaissance défensive.</p>
-<p>Tous les alliés qui sont affectés par votre sort de composition obtiennent votre bonus de circonstances de +1 issu de Connaisseur jusqu'au début de votre prochain tour.</p>
-<p>Enseigner à vos alliés renforce aussi vos propres compétences ; votre bonus de circonstance personnel issu de Connaisseur passe à +2 jusqu'au début de votre prochain tour.</p>
+<p>Tous les alliés qui sont affectés par votre sort de composition obtiennent votre bonus de circonstances de +1 issu de Connaisseur jusqu'au début de votre prochain tour. @Compendium[pf2e.feat-effects.WrWSieH9Acy6XuzV]{Effet: Alliés instruits (Allié)}</p>
+<p>Enseigner à vos alliés renforce aussi vos propres compétences ; votre bonus de circonstances personnel issu de Connaisseur passe à +2 jusqu'au début de votre prochain tour. @Compendium[pf2e.feat-effects.KceTcamIZ4ZrQJLD]{Effet: Alliés instruits (Vous-même)}</p>
