--- a/data/equipment/consumable-08-WGbE7qAGw8O5yH07.htm
+++ b/data/equipment/consumable-08-WGbE7qAGw8O5yH07.htm
@@ -17,16 +17,14 @@ Nom: Agent répulsif de vermine (modéré)
 <p><strong>Failure</strong> The creature is frightened 2.</p>
 <p><strong>Critical Failure</strong> The creature is frightened 2 and @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{Fleeing}.</p>
 ------ Description (fr) ------
-<p>Activer <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">3</span> Interact</p>
-<hr />
-<p>Activate <span class="pf2-icon">3</span> Interagir</p>
+<p>Activation <span class="pf2-icon">3</span> Interagir</p>
 <hr />
 Cette crème spécialisée sert de répulsif pour éloigner les insectes. Le répulsif sert également à un certain nombre de venins d’insectes communs, en atténuant leur puissance et en renforçant le système immunitaire de la personne qui le porte pour qu’elle résiste aux venins.
 <p>Une fois appliqué sur votre peau, le répulsif vous accorde un bonus de +2 aux jets de sauvegarde de Force contre les poisons pendant 4 heures.</p>
 <p>@Compendium[pf2e.consumable-effects.OAN5Fj21PJPhIqRU]{Effet: Agent répulsif de vermine (modéré)}</p>
 <hr />
-<p>De plus, tous les arthropodes (insectes, araignées, scorpions, crabes et autres animaux invertébrés similaires) doivent tenter une sauvegarde de Volonté (DD 24) lorsqu’ils essaient de vous attaquer avec une frappe de mêlée, ou avec une attaque en nuée comme les morsures de la nuée d’araignées. L'arthropode devient alors temporairement immunisé pendant 1 minute.</p>
+<p>De plus, tous les arthropodes (insectes, araignées, scorpions, crabes et autres animaux invertébrés similaires) doivent tenter un jet de sauvegarde de Volonté (DD 24) lorsqu’ils essaient de vous attaquer avec une frappe de corps à corps, ou avec une attaque en nuée (exemple les attaques de morsure de nuées d'araignés). L'arthropode devient alors temporairement immunisé pendant 1 minute.</p>
 <p><strong>Succès critique</strong> La créature peut agir normalement.</p>
-<p><strong>Échec</strong> La créature est effrayée 2.</p>
 <p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Éffrayé} 1.</p>
+<p><strong>Échec</strong> La créature est effrayée 2.</p>
 <p><strong>Échec critique</strong> La créature est Éffrayée 2 et @Compendium[pf2e.conditionitems.sDPxOjQ9kx2RZE8D]{En Fuite}.</p>
