dons de classe 08

--- a/data/feats/class-06-b7isszc8C75V3okn.htm
+++ b/data/feats/class-06-b7isszc8C75V3okn.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: A combination of additional viscosity and careful application keeps your weapons poisoned even when suffering significant wear and tear.
-Avantage: La combinaison d'une viscosité supplémentaire et d'une application soignée permet à vos armes de rester empoisonnées même lorsqu'elles subissent une usure importante.
+Avantage: Votre poison persiste sur vos armes.
 
 ------ Description (en) ------
 <p>A combination of additional viscosity and careful application keeps your weapons poisoned even when suffering significant wear and tear.</p>
