--- a/data/feats/class-06-bSXcyu7ExWq9qUzG.htm
+++ b/data/feats/class-06-bSXcyu7ExWq9qUzG.htm
@@ -6,7 +6,7 @@ PrereqFR: expert en Duperie
 
 ------ Benefits and spoiler ----
 Benefits: You use your deceptive skills to make your illusions seem even more real.
-Avantage: Vous utilisez vos compétences en matière de tromperie pour que vos illusions semblent encore plus réelles.
+Avantage: Votre présence vous permet de convaincre de l'existence de vos illusions.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature succeeded, but didn't critically succeed, at a Perception check or Will save to disbelieve an illusion from a spell that you cast.</p>
