--- a/data/feats/class-06-BBN5G6epRWXGwZHv.htm
+++ b/data/feats/class-06-BBN5G6epRWXGwZHv.htm
@@ -6,9 +6,9 @@ PrereqFR: expert en Survie|sorts de gardien
 
 ------ Benefits and spoiler ----
 Benefits: You are able to track your quarry through impossible places.
-Avantage: Vous êtes capable de traquer votre proie dans des endroits impossibles.
+Avantage: Vous obtenez le sort de gardien Pistage éphémère.
 
 ------ Description (en) ------
 <p>You are able to track your quarry through impossible places. You gain the @Compendium[pf2e.spells-srd.QpjHqxwTGdILLvjD]{Ephemeral Tracking} warden spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p>Vous êtes capables de pister votre proie au travers de lieux impossibles. Vous obtenez le sort de gardien @Compendium[pf2e.spells-srd.QpjHqxwTGdILLvjD]{Pistage éphémère}. Augmentez le nombre de points de focalisation de votre réserve de focalisation de 1.</p>
+<p>Vous êtes capable de pister votre proie au travers de lieux impossibles. Vous obtenez le sort de gardien @Compendium[pf2e.spells-srd.QpjHqxwTGdILLvjD]{Pistage éphémère}. Augmentez le nombre de points de focalisation de votre réserve de focalisation de 1.</p>
