--- a/data/equipment/consumable-03-lgqyRmQ3GZbbxQsD.htm
+++ b/data/equipment/consumable-03-lgqyRmQ3GZbbxQsD.htm
@@ -1,5 +1,5 @@
 Name: Vermin Repellent Agent (Lesser)
-Nom: Agent répulsif de vermine
+Nom: Agent répulsif de vermine (inférieur)
 État: libre
 
 ------ Description (en) ------
