--- a/data/equipment/consumable-03-nPWDuoe2PcgE0z2S.htm
+++ b/data/equipment/consumable-03-nPWDuoe2PcgE0z2S.htm
@@ -6,7 +6,7 @@ Nom: Piège du Torrent
 <p><span>You pile waterlogged plants or access a nearby source of water to rain down on a Medium or smaller creature that enters the snare's square. When a creature enters the square, the snare's square and all adjacent squares become slippery difficult terrain, and the triggering creature must attempt a DC 19 Reflex saving throw, with the following effects.<br /></span></p>
 <p><span><strong>Success</strong> The target is unaffected.<br /><strong>Failure</strong> The target falls prone.<br /><strong>Critical Failure</strong> The target falls prone and is forced into one of the other squares soaked by the snare. </span></p>
 ------ Description (fr) ------
-<p><span>Vous empilez des plantes gorgées d'eau ou accédez à une source d'eau à proximité pour faire pleuvoir sur une créature de taille moyenne ou plus petite qui entre dans la case où se trouve votre piège. Lorsqu'une créature pénètre dans le piège, la case du piège et toutes les cases adjacentes deviennent un terrain difficile et glissant, et la créature cible doit tenter un jet de sauvegarde Réflexes DD 19, ou subir les effets suivants.<br /></span></p>
-<p><strong>Success</strong> La cible n'est pas affectée.</p>
-<p><strong>Failure</strong> La cible ombe @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}. </p>
+<p>Vous empilez des plantes gorgées d'eau ou accédez à une source d'eau à proximité pour faire pleuvoir sur une créature de taille moyenne ou plus petite qui entre dans la case où se trouve votre piège. Lorsqu'une créature pénètre dans le piège, la case du piège et toutes les cases adjacentes deviennent un terrain difficile et glissant, et la créature cible doit tenter un jet de sauvegarde Réflexes DD 19, ou subir les effets suivants.</p>
+<p><strong>Succès</strong> La cible n'est pas affectée.</p>
+<p><strong>Échec</strong> La cible tombe @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}. </p>
 <p><strong>Échec critique</strong> La cible tombe À terre et est forcée de se placer dans l'une des autres cases trempées par le piège.</p>
