--- a/data/equipment/consumable-03-Oip645RjC5y57wFa.htm
+++ b/data/equipment/consumable-03-Oip645RjC5y57wFa.htm
@@ -16,9 +16,9 @@ Nom: Venin violet
 Le processus délicat d'extraction du venin de violet à partir d'un champignon violet le laisse dilué dans le meilleur des cas. Les alchimistes sont toujours à la recherche d'une version vraiment pure et non altérée de ce poison très toxique.
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Contact)</p>
-<p><strong>Jet de sauvegarde</strong> DD 17 Vigueur</p>
-<p><strong>Début</strong> 1 minute</p>
-<p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 1d6#poison]] poison plus @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round)</p>
-<p><strong>Étape 2</strong> [[/r 1d6#poison]] poison plus @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} (1 round)</p>
-<p><strong>Étape 3</strong> [[/r 2d6#poison]] poison plus affaibli 1 (1 round)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 17;</p>
+<p><strong>Début</strong> 1 minute;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Stade 1</strong> [[/r 1d6#poison]] dégâts de poison plus @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round)</p>
+<p><strong>Étape 2</strong> [[/r 1d6#poison]] dégâts de poison plus @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} (1 round)</p>
+<p><strong>Étape 3</strong> [[/r 2d6#poison]] dégâts de poison plus Affaibli 1 (1 round)</p>
