--- a/data/equipment/consumable-04-QJ1fTrX42PoEWpK5.htm
+++ b/data/equipment/consumable-04-QJ1fTrX42PoEWpK5.htm
@@ -15,8 +15,8 @@ Nom: Jambes de plomb
 Une fois injectée, cette toxine synthétique pénètre dans les extrémités, les engourdissant presque jusqu'à la paralysie ;
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir (Blessure)</p>
-<p><strong>Jet de sauvegarde</strong> DD 20 Vigueur</p>
-<p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 1d10 #poison]] points de dégâts de poison et pénalité d'état de -1,5 mètres à toutes les vitesses (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 2d6 #poison]] points de dégâts de poison et pénalité d'état de -3 mètres à toutes les vitesses (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 2d6 #poison]] moints de dégâts de poison et pénalité d'état de -6 mètres à toutes les vitesses (1 round)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 20;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Stade 1</strong> [[/r 1d10 #poison]] dégâts de poison et pénalité d'état de -1,5 mètres à toutes les vitesses (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 2d6 #poison]] dégâts de poison et pénalité d'état de -3 mètres à toutes les vitesses (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 2d6 #poison]] dégâts de poison et pénalité d'état de -6 mètres à toutes les vitesses (1 round)</p>
