--- a/data/equipment/consumable-04-SGS7fA2hcElw1EaL.htm
+++ b/data/equipment/consumable-04-SGS7fA2hcElw1EaL.htm
@@ -8,6 +8,6 @@ Nom: Poudre Détériorante
 <p><span>The affected object takes 1 damage per 3 hours (8 damage per day) and its Hardness is reduced by 1 per hour. The effect lasts for 3 days.</span></p>
 ------ Description (fr) ------
 <p>Contenue dans un petit sac en cuir ou en peau spécialement enchanté, cette poudre détériorante est un puissant agent caustique et un objet prisé par les adeptes les plus discrets de Rovagug.</p>
-<p><strong>Activate</strong> <span class="pf2-icon">D</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir</p>
 <p><strong>Effet</strong> Vous saupoudrez cette sorte poussière détériorante sur un objet moyen ou plus petit non surveillé. La poudre prend rapidement une couleur transparente et l'objet commence immédiatement à rouiller, à fondre ou à se désagréger. Pendant la durée indiquée, l’objet subit des dégâts constants ; si l’objet a une certaine dureté, la poussière réduit progressivement la dureté de l’objet. Si la poudre caustique est toujours active après que la dureté de l'objet'est réduite à 0, elle inflige des dégâts à l'objet comme décrit précédemment. Si l'objet survit, la réduction de la dureté réapparaît après l'expiration de la durée d'activation de la poudre, mais les dégâts sont conservés.</p>
-<p><span>L'objet affecté subit 1 point de dégât toutes les 3 heures (8 points de dégâts par jour) et sa dureté est réduite de 1 point par heure. L'effet dure pendant 3 jours.</span></p>
+<p>L'objet affecté subit 1 point de dégât toutes les 3 heures (8 points de dégâts par jour) et sa dureté est réduite de 1 point par heure. L'effet dure pendant 3 jours.</p>
