--- a/data/equipment/consumable-05-1CAPGpQczfq5exrs.htm
+++ b/data/equipment/consumable-05-1CAPGpQczfq5exrs.htm
@@ -15,8 +15,8 @@ Nom: Adrénaline diluée
 <p>Un supplément d'adrénaline synthétique qui augmente la conscience et le temps de réaction. L'hype diluée a été mélangée à de l'eau salée pour permettre une production de masse moins coûteuse.</p>
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir (Ingéré)</p>
-<p><strong>Jet de sauvegarde</strong> DD 21 Vigueur</p>
-<p><strong>Durée maximale</strong> 1 minute</p>
-@Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} ou  @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement} (1 round);</p>
-<p><strong>Étape 2</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (1 round)</p>
-<p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} et stupéfié 1 (1 round)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 21;</p>
+<p><strong>Durée maximale</strong> 1 minute;</p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} ou  @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement} (1 round);</p>
+<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (1 round);</p>
+<p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} et Stupéfié 1 (1 round)</p>
