--- a/data/equipment/consumable-05-5ftFTiKY0BMvhzL9.htm
+++ b/data/equipment/consumable-05-5ftFTiKY0BMvhzL9.htm
@@ -11,10 +11,10 @@ Nom: Mutagène Corps-de-pierre (inférieur)
 <p><strong>Duration</strong> 10 minute.</p>
 <p>@Compendium[pf2e.consumable-effects.PEPOd38VfVzQMKG5]{Effect: Stone Body Mutagen (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
 Ce mutagène calcifie votre corps, le rendant aussi dur que de la pierre.</p>
 <p><strong>Avantage</strong> Vous gagnez une résistance de 5 aux dégâts physiques (sauf contondant).</p>
-<p><strong>Inconvénient</strong> Vos vitesses sont réduites de 3 mètres (minimum 1,5 mètres) et vous subissez une pénalité de -2 aux sauvegardes par réflexe.</p>
+<p><strong>Inconvénient</strong> Vos vitesses sont réduites de 3 mètres (minimum 1,5 mètres) et vous subissez une pénalité de -2 aux jets de sauvegarde Réflexe.</p>
 <p><strong>Durée</strong> 10 minutes.</p>
-<p>@Compendium[pf2e.consumable-effects.PEPOd38VfVzQMKG5]{Effet : Mutagène Corps-de-pierre (inférieur)}</p>
+<p>@Compendium[pf2e.consumable-effects.PEPOd38VfVzQMKG5]{Effet: Mutagène Corps-de-pierre (inférieur)}</p>
