--- a/data/equipment/consumable-05-HU9eYAAfZMYnFMd9.htm
+++ b/data/equipment/consumable-05-HU9eYAAfZMYnFMd9.htm
@@ -7,6 +7,6 @@ Nom: Amulette d'Attirance du Chat
 <p><strong>Trigger</strong> You use a feat or ability to reroll a failed or critically failed Reflex saving throw (such as Cat's Luck or Halfling Luck).</p>
 <p>This clay figurine resembles a white cat with a paw outstretched. When it's activated, any allies within 10 feet who also just failed or critically failed a Reflex saving throw from the same source (such as a fireball spell) can also reroll their saving throw and use the better result. <br /></p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">F</span> Imaginer</p>
-<p><strong>Déclencheur</strong> Vous utilisez un don ou une capacité pour relancer un jet de sauvegarde des Réflexes raté ou critiquement raté (comme la chance du chat ou la chance du halfling).</p>
-<p>Cette figurine d'argile ressemble à un chat blanc avec une patte tendue. Lorsqu'elle est activée, tous les alliés situés dans un rayon de 3 mètres qui viennent également d'échouer ou d'échouer de manière critique à un jet de sauvegarde des Réflexes de la même source (comme un sort de boule de feu) peuvent également relancer leur jet de sauvegarde et utiliser le meilleur résultat. <br /></p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
+<p><strong>Déclencheur</strong> Vous utilisez un don ou une capacité pour relancer un jet de sauvegarde Réflexe raté ou critiquement raté (comme Chance du chat ou Chance du Halfeling).</p>
+<p>Cette figurine d'argile ressemble à un chat blanc avec une patte tendue. Lorsqu'elle est activée, tous les alliés situés dans un rayon de 3 mètres qui viennent également d'échouer ou d'échouer de manière critique à un jet de sauvegarde Réflexes de la même source (comme un sort de boule de feu) peuvent également relancer leur jet de sauvegarde et utiliser le meilleur résultat.</p>
