--- a/data/equipment/consumable-05-iUOcC9vFboSFI8fU.htm
+++ b/data/equipment/consumable-05-iUOcC9vFboSFI8fU.htm
@@ -15,10 +15,10 @@ Nom: Mort-truquée
 ------ Description (fr) ------
 <p>Typiquement utilisé pour simuler la mort d'une personne, ce poison fait rapidement perdre conscience à l'imbibé et supprime les signes vitaux. Une créature examinant la cible inconsciente doit réussir un test de médecine contre le DD + 4 de tromperie de l’imbibateur pour déterminer que la cible est vivante, et un succès critique permet à l’examinateur de déterminer qu’une toxine provoque l’effet. La toxine de  Mort-truquée a un goût extrêmement amer (Perception DD 10 à détecter), ce qui rend difficile de tromper une créature pour qu'elle consomme le poison contre sa volonté.</p>
 <hr />
-<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
-<p><strong>Jet de sauvegarde</strong> DC 18 Vigueur</p>
-<p><strong>Début</strong> 10 minutes</p>
-<p><strong>Durée maximale</strong> 5 jours</p>
-<p><strong>Étape 1</strong><strong> @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 2</strong> (1 round)</p>
-<p><strong>stade 2</strong> @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Inconscient} (1 heure)</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 18;</p>
+<p><strong>Début</strong> 10 minutes;</p>
+<p><strong>Durée maximale</strong> 5 jours;</p>
+<p><strong>Stade 1</strong>@Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 2 (1 round)</p>
+<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Inconscient} (1 heure)</p>
 <p><strong>Stade 3</strong> Inconscient (1 jour)</p>
