--- a/data/feats/class-06-JHcvySfCM9uYNb9N.htm
+++ b/data/feats/class-06-JHcvySfCM9uYNb9N.htm
@@ -2,12 +2,11 @@ Name: Revealing Stab
 Nom: Perforation révélatrice
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You drive your piercing weapon into an imperceptible foe, revealing its location to your allies.
-Avantage: Vous révélez la position d'un ennemi caché grâce à votre attaque avec une arme perforante.
+Avantage: Vous révélez la position d'un ennemi difficile à voir en y plantant une arme perforante.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a melee weapon that deals piercing damage</p>
@@ -19,4 +18,7 @@ Avantage: Vous révélez la position d'un ennemi caché grâce à votre attaque 
 ------ Description (fr) ------
 <p><strong>Conditions.</strong> Vous maniez une arme de corps à corps qui inflige des dégâts perforants.</p>
 <hr />
-<p>Vous enfoncez votre arme perforante dans un adversaire imperceptible, ce qui révèle sa position à vos alliés. Effectuez une Frappe avec l’arme de corps à corps requise. Vous n’avez pas à faire un test nu pour toucher la créature masquée et vous devez simplement réussir un test nu DD 5 pour cibler une créature cachée. Si vous touchez et infligez des dégâts, vous pouvez enfoncer l’arme requise dans une cible tangible, ce qui révèle sa position actuelle. Vous Relâchez l’arme et elle reste plantée dans la cible. Si la cible est masquée, les autres créatures n’ont pas besoin de réussir un test nu pour la toucher. Si la cible est cachée, les autres créatures doivent simplement réussir un test nu DD 5 pour pouvoir la cibler. Les créatures doivent pouvoir voir votre arme pour bénéficier de ces avantages et la cible ne peut pas devenir non détectée vis-à-vis de ceux qui voient votre arme. Si la cible est invisible, l’arme reste visible tant qu’elle reste plantée. Cet avantage dure jusqu’à ce que l’arme soit déplantée de la créature. Une créature adjacente ou la cible peut la déplanter avec 2 actions Interagir</p>
+<p>Vous enfoncez votre arme perforante dans un adversaire imperceptible, ce qui révèle sa position à vos alliés.</p>
+<p>Effectuez une Frappe avec l’arme de corps à corps requise. Vous n’avez pas à faire un test nu pour toucher la créature @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masquée} et vous devez simplement réussir un test nu DD 5 pour cibler une créature @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Cachée}.</p>
+<p>Si vous touchez et infligez des dégâts, vous pouvez enfoncer l’arme requise dans une cible tangible, ce qui révèle sa position actuelle. Vous @Compendium[pf2e.actionspf2e.wQYmDStjdjn0I26t]{Relâchez} l’arme et elle reste plantée dans la cible.</p>
+<p>Si la cible est masquée, les autres créatures n’ont pas besoin de réussir un test nu pour la toucher. Si la cible est cachée, les autres créatures doivent simplement réussir un test nu DD 5 pour pouvoir la cibler. Les créatures doivent pouvoir voir votre arme pour bénéficier de ces avantages et la cible ne peut pas devenir non détectée vis-à-vis de ceux qui voient votre arme. Si la cible est @Compendium[pf2e.conditionitems.zJxUflt9np0q4yML]{invisible}, l’arme reste visible tant qu’elle reste plantée. Cet avantage dure jusqu’à ce que l’arme soit déplantée de la créature. Une créature adjacente ou la cible peut la déplanter avec 2 actions Interagir</p>
