--- a/data/feats/class-06-jSkJIWPfSZZzvYzq.htm
+++ b/data/feats/class-06-jSkJIWPfSZZzvYzq.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You’ve discovered how to mix two elixirs into a single hybrid concoction.
-Avantage: Vous avez découvert comment mélanger deux élixirs en une seule concoction hybride.
+Avantage: Vous pouvez créer un élixir qui dispose de deux effets simultanés.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
