--- a/data/feats/class-06-Ea6Z5cxeBCCtPD5R.htm
+++ b/data/feats/class-06-Ea6Z5cxeBCCtPD5R.htm
@@ -6,7 +6,7 @@ PrereqFR: sorts de gardien
 
 ------ Benefits and spoiler ----
 Benefits: You can cause plants to grow and trap your foes with thorns.
-Avantage: Vous pouvez faire pousser des plantes et piéger vos ennemis avec des épines.
+Avantage: Vous obtenez le sort de gardien Roncier du rôdeur.
 
 ------ Description (en) ------
 <p>You can cause plants to grow and trap your foes with thorns. You gain the @Compendium[pf2e.spells-srd.KktHf7zIAWOr499h]{Ranger's Bramble} warden spell. Increase the number of Focus Points in your focus pool by 1.</p>
