--- a/data/feats/class-06-F1DVDJRARfdb1Kjz.htm
+++ b/data/feats/class-06-F1DVDJRARfdb1Kjz.htm
@@ -1,13 +1,12 @@
 Name: Storm Retribution
 Nom: Châtiment de la tempête
 PrereqEN: storm order|tempest surge order spell
-PrereqFR: ordre de la tempête|sort d’ordre onde de tempête
-État: changé
-État d'origine: officielle
+PrereqFR: ordre de la tempête|sort d’ordre Onde de tempête
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You lash out, directing a burst of storming fury toward a creature that has harmed you.
-Avantage: Vous vous défendez en déclenchant une explosion de fureur orageuse sur une créature qui vous a blessé.
+Avantage: Vous lancez Onde de tempête en réaction à un coup critique.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An opponent adjacent to you critically hits you with a melee weapon or melee unarmed attack.</p>
