--- a/data/feats/class-06-FkOtiB52wIOi7SP7.htm
+++ b/data/feats/class-06-FkOtiB52wIOi7SP7.htm
@@ -4,6 +4,10 @@ PrereqEN: Mask Familiar
 PrereqFR: Familier masque
 État: libre
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Votre Familier masque obtient quatre pouvoirs au lieu de deux.
+
 ------ Description (en) ------
 <p>Your mask familiar adapts quickly to material form, allowing it to gain more familiar and master abilities. You select four master and familiar abilities each day instead of two.</p>
 ------ Description (fr) ------
