--- a/data/feats/class-06-GE96a0UGPYM74qjI.htm
+++ b/data/feats/class-06-GE96a0UGPYM74qjI.htm
@@ -6,13 +6,13 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You swing clear through one foe and into another.
-Avantage: Vous passez au travers d'un ennemi et dans un autre.
+Avantage: Lorsque vous abattez un adversaire, vous Frappez un adversaire adjacent.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> Your melee Strike kills a creature or knocks it unconscious, and another foe is adjacent to that creature.</p>
 <hr />
 <p>You swing clear through one foe and into another. Make a melee Strike against the second foe.</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur.</strong> Vous portez une Frappe au corps à corps qui tue une créature ou lui fait perdre connaissance et un autre adversaire se trouve dans un espace adjacent à cette créature</p>
+<p><strong>Déclencheur.</strong> Vous portez une Frappe au corps à corps qui tue une créature ou lui fait perdre connaissance et un autre adversaire se trouve dans un espace adjacent à cette créature.</p>
 <hr />
 <p>Votre coup traverse un adversaire et en frappe un autre. Faites une Frappe au corps à corps contre le second adversaire.</p>
