--- a/data/feats/class-06-IEbnal1VJySrhxFR.htm
+++ b/data/feats/class-06-IEbnal1VJySrhxFR.htm
@@ -6,13 +6,13 @@ PrereqFR: expert en Vol
 
 ------ Benefits and spoiler ----
 Benefits: You dart towards your opponent, seeking to stab them and slice their purse-strings with a single movement
-Avantage: Vous vous élancez vers votre adversaire, cherchant à le poignarder et à couper les cordons de sa bourse d'un seul mouvement.
+Avantage: Vous Frappez lors d'un déplacement et tentez de Voler la cible.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a piercing or slashing melee weapon.</p>
 <hr />
 <p>You dart towards your opponent, seeking to stab them and slice their purse-strings with a single movement. Stride up to your Speed; this movement does not trigger reactions triggered by movement. At any point during this movement you can Strike an opponent within reach. If this Strike is successful, you can attempt a Thievery check to Steal from the target.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous maniez une arme au corps à corps perçante ou tranchante.</p>
+<p><strong>Conditions</strong> Vous maniez une arme au corps à corps perforante ou tranchante.</p>
 <hr />
-<p>Vous foncez vers votre opposant, cherchant à le poignarder et à couper les cordons de leur bourse en un unique mouvement. @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement} jusqu'à atteindre votre Vitesse de déplacement ; ce mouvement ne provoque pas de réactions déclenchées par le déplacement. À tout moment durant ce déplacement, vous pouvez @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frapper} un adversaire à portée. Si cette Frappe est réussie, vous pouvez faire un test de Vol pour voler la cible.</p>
+<p>Vous foncez vers votre adversaire, cherchant à le poignarder et à couper les cordons de sa bourse dans le même mouvement. @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement} jusqu'à atteindre votre Vitesse de déplacement ; ce mouvement ne provoque pas de réaction déclenchée par le déplacement. À tout moment durant ce déplacement, vous pouvez @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frapper} un adversaire à portée. Si cette Frappe est réussie, vous pouvez faire un test de Vol pour voler la cible.</p>
