--- a/data/feats/class-06-JdCRxwgtdQkJ1Ha6.htm
+++ b/data/feats/class-06-JdCRxwgtdQkJ1Ha6.htm
@@ -2,12 +2,11 @@ Name: Guardian's Deflection (Fighter)
 Nom: Déviation du gardien (Guerrier)
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You use your weapon to deflect the attack against your ally.
-Avantage: Vous utilisez votre arme pour dévier l'attaque contre votre allié.
+Avantage: Vous utilisez votre arme pour dévier l'attaque contre un allié adjacent.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An ally within your melee reach is hit by an attack, you can see the attacker, and the ally gaining a +2 circumstance bonus to AC would turn the critical hit into a hit or the hit into a miss.</p>
