--- a/data/feats/class-06-cTQMtd2IVlvgJwAn.htm
+++ b/data/feats/class-06-cTQMtd2IVlvgJwAn.htm
@@ -2,14 +2,11 @@ Name: Slice and Swipe
 Nom: Couper et dérober
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Steal from your target when you successfully strike them.
-Avantage: En attaquant votre adversaire au corps-à-corps vous réussissez à lui voler un petit objet.
-SpoilersEN: Agents of Edgewatch
-SpoilersFR: 
+Avantage: Vous pouvez Frapper un ennemi avec une arme tranchante et le voler en même temps.
 
 ------ Description (en) ------
 <p><strong>Access</strong> Help either the Washboard Dogs or the Diobel Sweepers destroy their rival.<br /><strong>Requirements</strong> You're wielding a melee weapon that deals slashing damage and you have a free hand.<br /></p>
@@ -18,5 +15,5 @@ SpoilersFR:
 ------ Description (fr) ------
 <p><strong>Accès</strong> Aider soit les Chiens de la laverie, soit les Balayeurs de Diobel à détruire leur rival.</p>
 <p><strong>Conditions</strong> Vous maniez une arme au corps à corps qui inflige des dégâts tranchants et vous avez une main libre.</p>
-<hr>
+<hr />
 <p>Vous tentez une Frappe au corps à corps avec l'arme requise. Si vous touchez et faites des dégâts et que le résultat du jet d'attaque excède le DD de Perception de la cible, vous @Compendium[pf2e.actionspf2e.RDXXE7wMrSPCLv5k]{Volez} un petit objet sur la cible (comme si vous aviez réussi cette tâche en utilisant la compétence Vol). En fonction de l'objet, la cible pourrait réaliser qu'elle a été volée et les observateurs pourraient réaliser que vous possédez l'objet volé si le jet d'attaque n'excède pas leur DD de Perception.</p>
