--- a/data/feats/class-06-eZrftEihfuJBldG5.htm
+++ b/data/feats/class-06-eZrftEihfuJBldG5.htm
@@ -2,8 +2,7 @@ Name: Advanced Bloodline
 Nom: Lignage avancé
 PrereqEN: bloodline spell
 PrereqFR: sort de lignage
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You have studied your bloodline to learn the secrets of its magic.
