--- a/data/feats/class-06-hjApw8AvYVuqQk2W.htm
+++ b/data/feats/class-06-hjApw8AvYVuqQk2W.htm
@@ -6,7 +6,7 @@ PrereqFR: Instinct spirituel
 
 ------ Benefits and spoiler ----
 Benefits: You call forth protective spirits to ward off ranged attacks.
-Avantage: Vous appelez les esprits protecteurs pour parer les attaques à distance.
+Avantage: Lorsque vous êtes enragé, Vous être davantage protégé contre les attaques à distance.
 
 ------ Description (en) ------
 <p>You call forth protective spirits to ward off ranged attacks. Until your rage ends, anyone making a ranged attack against you must succeed at a DC 5 flat check or the attack misses with no effect.</p>
