--- a/data/feats/class-06-iJrHJKNGxV4z4Qi7.htm
+++ b/data/feats/class-06-iJrHJKNGxV4z4Qi7.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Artokus developed a mixture of volatile materials that burns hotter and longer than typical alchemist's fire.
-Avantage: Artokus a mis au point un mélange de matières volatiles qui brûle plus fort et plus longtemps que le feu typique des alchimistes.
+Avantage: Votre feu grégeois inflige des dégâts de feu persistants.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
@@ -18,6 +18,6 @@ Avantage: Artokus a mis au point un mélange de matières volatiles qui brûle p
 <p>The enhanced alchemist's fire burns even underwater, and any attempts to end the persistent damage by using water have no effect.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par round</p>
-<p><strong>Déclencheur</strong> Vous utilisez @Compendium[pf2e.feats-srd.NlEZ0piDxg9buXCL]{Alchimie rapide} pour fabriquer un @Compendium[pf2e.equipment-srd.yd3kEK21YknZLlcT]{Feu grégeois} et le niveau de cette bombe est au moins de 2 niveaux inférieurà votre niveau d'@Compendium[pf2e.classfeatures.Pe0zmIqyTBc2Td0I]{Alchimie avancé}.</p>
-<hr>
+<p><strong>Déclencheur</strong> Vous utilisez @Compendium[pf2e.feats-srd.NlEZ0piDxg9buXCL]{Alchimie rapide} pour fabriquer un @Compendium[pf2e.equipment-srd.yd3kEK21YknZLlcT]{Feu grégeois} et le niveau de cette bombe est au moins de 2 niveaux inférieur à votre niveau d'@Compendium[pf2e.classfeatures.Pe0zmIqyTBc2Td0I]{Alchimie avancée}.</p>
+<hr />
 <p>Artokus a développé un mélange de matériaux volatiles qui brûle plus fort et plus longtemps que le feu grégeois typique. Vous incluez ce mélange supplémentaire lorsque vous fabriquez votre feu grégeois. Le feu alchimique inflige [[/r 1d4 #feu persistant]] dégâts de feu persistants en plus de ceux que le feu grégeois causerait normalement (par exemple, un feu grégeois modéré inflige 1d4+2 dégâts de feu persistants). Une créature subissant des dégâts de feu persistants du feu grégeois a besoin de réussir deux tests nus pour mettre un terme aux dégâts persistants ou un test si la créature possède une récupération assistée qui réduit le DD du test nu à 10. Le feu grégeois amélioré brûle même sous l'eau  et toute tentative pour mettre un terme aux dégâts persistants en utilisant de l'eau n'a pas d'effet.</p>
