dons de classe 06

--- a/data/feats/class-06-k0NNa5Ko4XhDdBYB.htm
+++ b/data/feats/class-06-k0NNa5Ko4XhDdBYB.htm
@@ -6,7 +6,7 @@ PrereqFR: Odorat aiguisé ou odorat précis ou imprécis ou vision nocturne
 
 ------ Benefits and spoiler ----
 Benefits: Your senses gain even greater clarity.
-Avantage: Vos sens sont encore plus clairs.
+Avantage: Lorsque vous êtes enragé, vous obtenez Vision dans le noir et votre odorat a une portée de 18 m.
 
 ------ Description (en) ------
 <p>Your senses gain even greater clarity. While raging, you gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision} if you don't already have it, and the range of your imprecise scent increases to 60 feet.</p>
