--- a/data/feats/class-06-lGCFVYjL9Lp5m9Ex.htm
+++ b/data/feats/class-06-lGCFVYjL9Lp5m9Ex.htm
@@ -2,12 +2,11 @@ Name: Cast Down
 Nom: Incantation renversante
 PrereqEN: harmful font or healing font
 PrereqFR: source de mise à mal ou de guérison
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: The sheer force of your faith can bring a foe crashing down.
-Avantage: La force brute de votre foi peut forcer un adversaire à terre.
+Avantage: Les dégâts infligés à un adversaire par Mise à mal ou Guérison le font tomber et le ralentissent en cas d'échec critique.
 
 ------ Description (en) ------
 <p>The sheer force of your faith can bring a foe crashing down.</p>
