--- a/data/feats/class-06-NMWXHGWUcZGoLDKb.htm
+++ b/data/feats/class-06-NMWXHGWUcZGoLDKb.htm
@@ -2,12 +2,11 @@ Name: Attack of Opportunity
 Nom: Attaque d'Opportunité
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You swat a foe that leaves an opening.
-Avantage: Vous frappez un adversaire qui vous laisse une ouverture.
+Avantage: Vous faites une Frappe au corps à corps contre une créature qui se déplace à votre portée, fait une attaque à distance ou une action de manipulation.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within your reach uses a manipulate action or a move action, makes a ranged attack, or leaves a square during a move action it's using.</p>
