--- a/data/feats/class-06-mqLPCNdCSNyY7gyI.htm
+++ b/data/feats/class-06-mqLPCNdCSNyY7gyI.htm
@@ -6,7 +6,7 @@ PrereqFR: Instinct superstitieux
 
 ------ Benefits and spoiler ----
 Benefits: You use your hatred of magic to lash out at the sight of spellcasting, allowing you to interrupt an enemy's spell.
-Avantage: Vous utilisez votre haine de la magie pour vous déchaîner à la vue d'un lanceur de sorts, ce qui vous permet d'interrompre le sort d'un ennemi.
+Avantage: Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} contre un adversaire qui lance un sort pour tenter d'interrompre son sort.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within your reach @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Cast a Spell}.</p>
