--- a/data/feats/class-06-n2hawNmzW7DBn1Lm.htm
+++ b/data/feats/class-06-n2hawNmzW7DBn1Lm.htm
@@ -2,14 +2,12 @@ Name: Mountain Stronghold
 Nom: Bastion de la montagne
 PrereqEN: |Mountain Stance
 PrereqFR: Posture de la montagne
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You focus on your connection to the earth and call upon the mountain to block attacks against you.
-Avantage: Vous vous concentrez sur votre lien avec la terre et faites appel à la montagne pour bloquer les attaques contre vous.
------- Benefits and spoiler ----
-Avantage: Vous vous concentrez sur votre lien avec la terre et faites appel à la montagne pour bloquer les attaques contre vous.
+Avantage: Vous bénéficiez d’un bonus de circonstances de +2 à la CA.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are in @Compendium[pf2e.feats-srd.ZL5UU9quCTvcWzfY]{Mountain Stance}</p>
 <hr />
@@ -21,3 +19,4 @@ Avantage: Vous vous concentrez sur votre lien avec la terre et faites appel à l
 <p><strong>Conditions</strong> Vous êtes dans la Posture de la montagne</p>
 <hr />
 <p>Vous vous concentrez sur votre lien avec la terre et suppliez la montagne qu’elle bloque les attaques qui vous sont destinées. Vous bénéficiez d’un bonus de circonstances de +2 à la CA jusqu’au début de votre prochain tour.</p>
+<p>@Compendium[pf2e.pf2e-macros.4nEbRlo2cB9KkK7T]{Effet : Posture de la Montagne}</p>
