--- a/data/feats/class-06-nRjyyDulHnP5OewA.htm
+++ b/data/feats/class-06-nRjyyDulHnP5OewA.htm
@@ -2,14 +2,12 @@ Name: Gorilla Pound
 Nom: Battement du gorille
 PrereqEN: |expert in Intimidation|Gorilla Stance
 PrereqFR: expert en Intimidation|Posture du gorille
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You pound your chest before slamming into your foes.
 Avantage: Vous vous frappez la poitrine avant de frapper vos ennemis.
------- Benefits and spoiler ----
-Avantage: Vous vous frappez la poitrine avant de frapper vos ennemis.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are in Gorilla Stance.</p>
 <hr />
@@ -22,6 +20,7 @@ Avantage: Vous vous frappez la poitrine avant de frapper vos ennemis.
 <p><strong>Conditions</strong> Vous avez adopté la Posture du gorille.</p>
 <hr>
 <p>Vous battez des bras sur votre poitrine avant de porter des coups à vos ennemis.</p>
-<p>Effectuez un test d'Intimidation pour @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoraliser}, puis portez une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de coup du gorille contre la même cible. Si votre Frappe touche, vous obtenez un bonus de circonstance aux jet de dégâts égal au triple de la valeur de la condition @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayée} de la cibles.</p>
+<p>Effectuez un test d'Intimidation pour @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Démoraliser}, puis portez une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de coup du gorille contre la même cible. Si votre Frappe touche, vous obtenez un bonus de circonstance aux jet de dégâts égal au triple de la valeur de la condition @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayée} de la cible.</p>
 <hr />
 <p><strong>Spécial</strong> Si vous possédez ce don, lorsque vous êtes dans la Posture du gorille, vous obtenez une vitesse @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{d'Escalade} de 4,5 m.</p>
+<p>@Compendium[pf2e.feat-effects.UZKIKLuwpQu47feK]{Posture : Posture de Gorille (Coup de gorille)}</p>
