--- a/data/feats/class-06-nU0r77AZXMXIlti6.htm
+++ b/data/feats/class-06-nU0r77AZXMXIlti6.htm
@@ -6,13 +6,13 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You scan the battlefield quickly, remembering critical details about multiple opponents you face.
-Avantage: Vous parcourez rapidement le champ de bataille, en vous souvenant des détails essentiels sur les multiples adversaires que vous affrontez.
+Avantage: Vous souvenir de votre proie vous permet de Vous souvenir d'autres créatures visibles.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You succeed or critically succeed at a check to @Compendium[pf2e.actionspf2e.KygTSeDvsFoSO6HW]{Recall Knowledge} on your hunted prey.</p>
 <hr />
 <p>You scan the battlefield quickly, remembering critical details about multiple opponents you face. You immediately attempt a check to Recall Knowledge about a different creature you can perceive.</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur</strong> Vous réussissez ou réussissez de manière critique à un test pour @Compendium[pf2e.actionspf2e.KygTSeDvsFoSO6HW]{Vous souvenir} de votre proie.</p>
+<p><strong>Déclencheur</strong> Vous obtenez un succès ou un succès critique à un test pour @Compendium[pf2e.actionspf2e.KygTSeDvsFoSO6HW]{Vous souvenir} de votre proie.</p>
 <hr />
-<p>Vous examinez le champ de bataille en un clin d'œil, vous souvenant de détails à propos de multiples adversaires auxquels vous faites face. Vous tentez immédiatement un test pour Vous souvenir à propos d'une créature différente que vous pouvez percevoir.</p>
+<p>Vous examinez le champ de bataille en un clin d'œil, vous souvenant de détails à propos de multiples adversaires auxquels vous avez fait face. Vous tentez immédiatement un test pour Vous souvenir à propos d'une créature différente que vous pouvez percevoir.</p>
