dons de classe 06

--- a/data/feats/class-06-OINfbwNZGnlyMqPR.htm
+++ b/data/feats/class-06-OINfbwNZGnlyMqPR.htm
@@ -2,19 +2,17 @@ Name: Return Fire
 Nom: Tir retourné
 PrereqEN: |Deflect Arrow|Monastic Archer Stance
 PrereqFR: Parade de projectile|Posture de l'archer Monastique
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Snatching an arrow out of the air, you instantly put it to your bow and return fire.
-Avantage: Arrachant une flèche de l'air, vous l'enfoncez instantanément dans votre arc et ripostez.
------- Benefits and spoiler ----
-Avantage: Arrachant une flèche de l'air, vous l'enfoncez instantanément dans votre arc et ripostez.
+Avantage: Vous interceptez une flèche pour la relancer immédiatement.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are in @Compendium[pf2e.feats-srd.YG2RxXE9SMfwo6wP]{Monastic Archer Stance}, are wielding <br />a bow, and have a free hand.</p>
 <hr />
 <p>Snatching an arrow out of the air, you instantly put it to your bow and return fire. When you successfully @Compendium[pf2e.feats-srd.sgaqlDFTVC7Ryurt]{Deflect an Arrow} as part of that reaction you can immediately make a ranged bow Strike by firing the arrow you deflected from your own bow.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous êtes dans la Posture de l'archer monastique, en train de manier un arc et possédez une main libre.</p>
+<p><strong>Conditions</strong> Vous êtes dans la @Compendium[pf2e.feats-srd.YG2RxXE9SMfwo6wP]{Posture de l'archer monastique}, en train de manier un arc et possédez une main libre.</p>
 <hr />
-<p>Interceptant une flèche en l'air, vous la placez instantanément sur votre arc et retournez le tir. Lorsque vous réussissez votre Parade de projectile avec une flèche, comme partie de cette réaction, vous pouvez faire immédiatement une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} à distance avec l'arc en tirant la flèche que vous avez attrapée à partir de votre propre arc.</p>
+<p>Interceptant une flèche en l'air, vous la placez instantanément sur votre arc et retournez le tir. Lorsque vous réussissez votre @Compendium[pf2e.feats-srd.sgaqlDFTVC7Ryurt]{Parade de projectile} avec une flèche, comme partie de cette réaction, vous pouvez faire immédiatement une Frappe à distance à l'arc en tirant la flèche que vous avez attrapée à partir de votre propre arc.</p>
