--- a/data/feats/class-06-OY1Ewg0dbCp52Hl5.htm
+++ b/data/feats/class-06-OY1Ewg0dbCp52Hl5.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your strength is part of your rage, so as long as your anger remains, you can gather your strength and rage to overcome any sort of enfeeblement.
-Avantage: Votre force fait partie de votre rage, donc tant que votre colère demeure, vous pouvez rassembler votre force et votre rage pour surmonter toute sorte d'affaiblissement.
+Avantage: La rage vous permet de réduire l'état Affaibli de 1.
 
 ------ Description (en) ------
 <p>Your strength is part of your rage, so as long as your anger remains, you can gather your strength and rage to overcome any sort of enfeeblement.</p>
