--- a/data/feats/class-06-PqZZSo06BH5N7x7C.htm
+++ b/data/feats/class-06-PqZZSo06BH5N7x7C.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You transfer vestiges of magical energy to the air around you, creating a vortex that deflects ranged attacks.
-Avantage: Vous transférez des vestiges d'énergie magique à l'air qui vous entoure, créant un vortex qui dévie les attaques à distance.
+Avantage: vous obtenez un bonus de statut de +1 à votre CA contre les attaques à distance par arme et les attaques physiques à mains nues à distance.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> Your most recent action was to cast a non-<br />cantrip spell.</p>
