--- a/data/feats/class-06-QSuwyX84U26OLzZI.htm
+++ b/data/feats/class-06-QSuwyX84U26OLzZI.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have just the thing for the situation.
-Avantage: Vous avez ce qu'il faut pour cette situation.
+Avantage: Vous obtenez les dons Planificateur prescient et Consommable prescient.
 
 ------ Description (en) ------
 <p>You have just the thing for the situation. You gain the @Compendium[pf2e.feats-srd.bh2jHyyYrkLMsIdX]{Prescient Planner} and @Compendium[pf2e.feats-srd.lHFz4MmebvPqTb0A]{Prescient Consumable} feats.</p>
