--- a/data/feats/class-06-SHpVHkPxtQggD9Cf.htm
+++ b/data/feats/class-06-SHpVHkPxtQggD9Cf.htm
@@ -3,8 +3,11 @@ Nom: Dévouement de Maître des épées
 PrereqEN: Strength, Dexterity, or Constitution 14|member of the Pathfinder Society affiliated with the School of Swords
 Avantage: Votre entrainement aux épées vous ont appris à ne pas relâcher votre prise sur votre arme.
 PrereqFR: Force, Dextérité ou Constitution 14|membre de la Société des Éclaireurs affilié à l'École des Épées
-État: changé
-État d'origine: libre
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous êtes difficile à désarmer et Coopération adroite vous accorde un bonus de circonstances de +2.
 
 ------ Description (en) ------
 <p>Your Swords training taught you to never lose hold of your weapon. You gain a +2 circumstance bonus to your Reflex DC when foes attempt to Disarm you. If you have the Deft Cooperation feat and critically succeed on a check to Aid an ally's attack roll or skill check, you gain a +2 circumstance bonus from Deft Cooperation (instead of a +1 bonus) the first time you attempt an attack roll or attempt a skill check where the bonus would apply.</p>
