--- a/data/feats/class-06-WAx7RABHDvVVcRI8.htm
+++ b/data/feats/class-06-WAx7RABHDvVVcRI8.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can prepare two spells in one slot, giving you the freedom to choose the spell when you cast it.
-Avantage: Vous pouvez préparer deux sorts dans un seul emplacement, ce qui vous donne la liberté de choisir le sort au moment où vous le lancez.
+Avantage: Vous pouvez préparer deux sorts dans un même emplacement avant de choisir lequel lancer.
 
 ------ Description (en) ------
 <p>You can prepare two spells in one slot, giving you the freedom to choose the spell when you cast it.</p>
@@ -14,5 +14,5 @@ Avantage: Vous pouvez préparer deux sorts dans un seul emplacement, ce qui vous
 <p>When you @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Cast a Spell} from that slot, choose which spell to cast. Once you've chosen, the unused spell dissipates as though you hadn't prepared it at all-for example, it isn't available for use with @Compendium[pf2e.actionspf2e.v82XtjAVN4ffgVVR]{Drain Bonded Item}.</p>
 ------ Description (fr) ------
 <p>Vous pouvez préparer deux sorts dans un emplacement, vous donnant la liberté de choisir le sort lorsque vous le lancez.</p>
-<p>Lorsque vous préparer vos sorts de la journée, vous pouvez choisir un emplacement de sort d'un niveau de moins que le plus haut niveau de sort que vous pouvez lancer et préparer deux sorts dans cet emplacement.</p>
-<p>Lorsquee vous @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancez un sort} de cet emplacement, choisissez lequel vous lancez. Une fois choisi le sort inutilisé se dissipe comme si vous ne l'aviez jamais préparé du tout — par exemple, il n'est plus disponible pour être utilisé avec @Compendium[pf2e.actionspf2e.v82XtjAVN4ffgVVR]{Drain d'objet lié}.</p>
+<p>Lorsque vous préparez vos sorts de la journée, vous pouvez choisir un emplacement de sort d'un niveau de moins que le plus haut niveau de sort que vous pouvez lancer et préparer deux sorts dans cet emplacement.</p>
+<p>Lorsque vous @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancez un sort} à partir de cet emplacement, choisissez lequel des deux vous lancez. Une fois choisi le sort inutilisé se dissipe comme si vous ne l'aviez jamais préparé du tout — par exemple, il n'est plus disponible pour être utilisé avec @Compendium[pf2e.actionspf2e.v82XtjAVN4ffgVVR]{Drain d'objet lié}.</p>
