--- a/data/feats/class-06-nU0r77AZXMXIlti6.htm
+++ b/data/feats/class-06-nU0r77AZXMXIlti6.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You scan the battlefield quickly, remembering critical details about multiple opponents you face.
-Avantage: Vous souvenir de votre proie vous permet de Vous souvenir d'autres créatures visibles.
+Avantage: Vous souvenir de votre proie vous permet de Vous souvenir d'autres créatures présentes.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You succeed or critically succeed at a check to @Compendium[pf2e.actionspf2e.KygTSeDvsFoSO6HW]{Recall Knowledge} on your hunted prey.</p>
