--- a/data/feats/class-06-qDfTqetM9UEpp8ty.htm
+++ b/data/feats/class-06-qDfTqetM9UEpp8ty.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your patron grants you greater knowledge.
-Avantage: Votre mécène vous accorde une plus grande connaissance.
+Avantage: Vous obtenez le maléfice associé et votre familier apprend le sort associé à une Leçons de sorcière.
 
 ------ Description (en) ------
 <p>Your patron grants you greater knowledge.</p>
