--- a/data/feats/class-06-uhfZtjbfJ8pZIWrF.htm
+++ b/data/feats/class-06-uhfZtjbfJ8pZIWrF.htm
@@ -1,10 +1,12 @@
 Name: Scrollmaster Dedication
 Nom: Dévouement du Maître des parchemins
 PrereqEN: expert in any Lore skill|member of the Pathfinder Society affiliated with the School of Scrolls
-Avantage: L'expérience acquise à tenir la chronique de vos aventures et de vos découvertes vous fait bénéficier d'un discernement et d'une mémoire améliorés.
 PrereqFR: expert dans n'importe quelle compétence de Connaissance|membre de la Société des Éclaireurs affiliée à l'École des parchemins
-État: changé
-État d'origine: libre
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous obtenez un bonus de circonstances pour vous rappeler de détails qui se sont produits au cours de l'aventure et avez une mémoire infaillibre sur les dernières 24 heures.
 
 ------ Description (en) ------
 <p>Your experience chronicling adventures and discoveries grants you heightened discernment and memory. For 24 hours after learning a prominent fact-such as the name of an NPC you have met, the details of your mission briefing, and similar information-you can recall it without attempting a check, though this doesn't allow you to automatically memorize long strings of numbers or text. You also gain a +2 circumstance bonus to checks to remember a detail that has come up before in the current adventure, even if it was more than 24 hours ago.</p>
