--- a/data/feats/class-06-OWedlrKGsVZVkSnT.htm
+++ b/data/feats/class-06-OWedlrKGsVZVkSnT.htm
@@ -2,8 +2,7 @@ Name: Insect Shape
 Nom: Morphologie d'insecte
 PrereqEN: Wild Shape
 PrereqFR: Morphologie sauvage
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your understanding of life expands, allowing you to mimic a wider range of creatures.
@@ -14,4 +13,6 @@ Avantage: Grâce à votre compréhension du vivant, vous diversifiez davantage l
 <p>Add the forms in @Compendium[pf2e.spells-srd.XI6Lzd2B5pernkPd]{Insect Form} to your <em>wild shape</em> list.</p>
 <p>Whenever you use <em>wild shape</em> to polymorph into the non-flying <em>insect form</em> listed in @Compendium[pf2e.spells-srd.gfPjmG6Fe6D3MFjl]{Pest Form}, the duration is 24 hours instead of 10 minutes.</p>
 ------ Description (fr) ------
-<p>Vous développez votre compréhension de la vie, ce qui vous permet de diversifier encore davantage les formes de créatures que vous pouvez adopter. Ajoutez les formes du sort forme d’insecte à celles de votre morphologie sauvage. Chaque fois que vous utilisez morphologie sauvage pour prendre la forme d’un insecte non volant indiqué dans forme de nuisible, la durée s’élève à 24 h au lieu de 10 minutes.</p>
+<p>Vous développez votre compréhension de la vie, ce qui vous permet de diversifier encore davantage les formes de créatures que vous pouvez adopter.</p>
+<p>Ajoutez les formes du sort @Compendium[pf2e.spells-srd.XI6Lzd2B5pernkPd]{Forme d’insecte} à celles de votre morphologie sauvage.</p>
+<p>Chaque fois que vous utilisez morphologie sauvage pour prendre la forme d’un insecte non volant indiqué dans @Compendium[pf2e.spells-srd.gfPjmG6Fe6D3MFjl]{Forme de nuisible}, la durée s’élève à 24 h au lieu de 10 minutes.</p>
