--- a/data/feats/class-06-S14S52HjszTgIy4l.htm
+++ b/data/feats/class-06-S14S52HjszTgIy4l.htm
@@ -2,14 +2,12 @@ Name: Crane Flutter
 Nom: Battement d'aile de la grue
 PrereqEN: |Crane Stance
 PrereqFR: Posture de la grue
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You interpose your arm between yourself and your opponent.
-Avantage: Vos bras vous protègent et attaquent grâce à la posture de la Grue.
------- Benefits and spoiler ----
-Avantage: Vos bras vous protègent et attaquent grâce à la posture de la Grue.
+Avantage: Votre bonus de circonstances à la CA conféré par la Posture de la grue passe à +3 contre l’attaque à l’origine du déclenchement et vous pouvez riposter contre un adversaire qui vous manque.
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are targeted with a melee attack by an attacker you can see.</p>
 <p><strong>Requirements</strong> You are in @Compendium[pf2e.feats-srd.bf7NCeKqDClaqhTR]{Crane Stance}.</p>
