--- a/data/feats/class-06-Su4nbNnR0mjgusTT.htm
+++ b/data/feats/class-06-Su4nbNnR0mjgusTT.htm
@@ -6,11 +6,11 @@ PrereqFR: Mains guérisseuses
 
 ------ Benefits and spoiler ----
 Benefits: The blessing of your deity heightens your healing ability, making your mundane healing work as if by magic.
-Avantage: La bénédiction de votre divinité augmente votre capacité de guérison, rendant vos soins banals comme s'ils étaient magiques.
+Avantage: Vous accordez le maximum de points de vie en Soignant les blessures.
 
 ------ Description (en) ------
 <p>The blessing of your deity heightens your healing ability, making your mundane healing work as if by magic.</p>
 <p>When you succeed at a Medicine check to @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Treat Wounds}, your action gains the divine trait and you heal the maximum amount for the 2d8 (or 4d8 on a critical success). If you have an ability that adds additional dice to your Treat Wounds, you still roll those normally.</p>
 ------ Description (fr) ------
-<p>La bénédiction de votre divinité intensifie votre capacité de soins, faisant de vos soins ordinaires comme s'il s'agissait de soins magiques.</p>
-<p>Lorsque vous réussissez un test de Médecine pour @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Soigner les blessures}, votre action obtient le trait divin et vous soignez le montant maximumdes 2d8 (ou des 4d8 sur une réussite critique). Si vous avez une capacité qui ajoute des dés supplémentaires à votre capacité de Soigner les blessures, vous lancez toujours ces dés normalement.</p>
+<p>La bénédiction de votre divinité intensifie votre capacité de soins, faisant reseembler vos soins ordinaires à des soins magiques.</p>
+<p>Lorsque vous réussissez un test de Médecine pour @Compendium[pf2e.actionspf2e.1kGNdIIhuglAjIp9]{Soigner les blessures}, votre action obtient le trait divin et vous soignez le montant maximum des 2d8 (ou des 4d8 sur une réussite critique). Si vous avez une capacité qui ajoute des dés supplémentaires à votre capacité de Soigner les blessures, vous lancez toujours ces dés normalement.</p>
