--- a/data/feats/class-06-T5xFirAE8VLL5Lbu.htm
+++ b/data/feats/class-06-T5xFirAE8VLL5Lbu.htm
@@ -2,12 +2,11 @@ Name: Smite Good
 Nom: Châtiment du bien
 PrereqEN: divine ally (blade)|tenets of evil
 PrereqFR: Allié divin (lame)|préceptes du mal
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your blade ally shares your lust for the blood of good creatures.
-Avantage: Votre Lame alliée partage votre goût du sang des créatures du bien.
+Avantage: Votre allié divin Lame inflige des dégâts du mal supplémentaires.
 
 ------ Description (en) ------
 <p>Your blade ally shares your lust for the blood of good creatures.</p>
@@ -15,5 +14,6 @@ Avantage: Votre Lame alliée partage votre goût du sang des créatures du bien.
 <p>If the chosen enemy attacks you before the start of your next turn, the duration extends to the end of that enemy's next turn. If the enemy continues to attack you each turn, the duration continues to extend.</p>
 <p>@Compendium[pf2e.feat-effects.2MIn8qyPTmz4ZyO1]{Effect: Smite Good}</p>
 ------ Description (fr) ------
-<p>Votre allié lame partage votre goût du sang des créatures du bien. Choisissez un ennemi que vous pouvez voir. Jusqu'au début de votre prochain tour, vos @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} contre cet adversaire en utilisant l'arme que votre allié lame habite infligent [[/r 4 #mal]] dégâts maléfiques supplémentaires, passant à [[/r 6 #mal]] si vous êtes maître avec cet arme.</p>
-<p>Si l'ennemi choisi  vous attaque avant le début de votre prochain tour, la durée s'étend jusqu'à la fin du prochain tour de cet ennemi. Si l'ennemi continue à vous attaquer à chaque tour, la durée continue à s'accroître.</p>
+<p>Votre allié divin lame partage votre goût du sang des créatures du bien. Choisissez un ennemi que vous pouvez voir. Jusqu'au début de votre prochain tour, vos Frappes contre cet adversaire en utilisant l'arme que votre allié divin lame habite infligent 4 dégâts maléfiques supplémentaires, qui passent à 6 si vous êtes maître avec cette arme.</p>
+<p>Si l'ennemi choisi vous attaque avant le début de votre prochain tour, la durée s'étend jusqu'à la fin du prochain tour de cet ennemi. Si l'ennemi continue à vous attaquer à chaque tour, la durée continue à s'accroître.</p>
+<p>@Compendium[pf2e.feat-effects.2MIn8qyPTmz4ZyO1]{Effet: Châtiment du bien}</p>
