--- a/data/feats/class-06-VqVgcqmG6xmYuDbK.htm
+++ b/data/feats/class-06-VqVgcqmG6xmYuDbK.htm
@@ -1,18 +1,18 @@
 Name: Scouring Rage
 Nom: Rage débordante
 PrereqEN: an instinct that allows you to change your additional damage from Rage to a different damage type
-PrereqFR: un instinct qui vous autorise à changer les dégâts supplémentaires de votre rage en un type de dégât différent
+PrereqFR: un instinct qui vous autorise à changer vos dégâts supplémentaires de la rage en un type de dégât différent
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You emit a powerful surge of instinctual energy when you unleash your potential.
-Avantage: Vous émettez une puissante poussée d'énergie instinctive lorsque vous libérez votre potentiel.
+Avantage: Vous infligez des dégâts du type de votre rage aux créatures adjacentes.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You @Compendium[pf2e.actionspf2e.Ah5g9pDwWF9b9VW9]{Rage}.</p>
 <hr />
 <p>You emit a powerful surge of instinctual energy when you unleash your potential. Each adjacent creature takes damage equal to your level (basic Fortitude save against your class DC) of the same type as your additional damage during that Rage.</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur</strong> Vous êtes en @Compendium[pf2e.actionspf2e.Ah5g9pDwWF9b9VW9]{Rage}.</p>
+<p><strong>Déclencheur</strong> Vous entrez en @Compendium[pf2e.actionspf2e.Ah5g9pDwWF9b9VW9]{Rage}.</p>
 <hr />
 <p>Vous émettez une puissante décharge d'énergie instinctive lorsque vous libérez votre potentiel. Chaque créature adjacente subit des dégâts égaux à votre niveau (Jet de vigueur basique contre votre DD de classe) du même type que celui de vos dégâts supplémentaires durant cette Rage.</p>
