--- a/data/feats/class-06-W21jKAcG0GtEtBiK.htm
+++ b/data/feats/class-06-W21jKAcG0GtEtBiK.htm
@@ -6,7 +6,7 @@ PrereqFR: Instinct de géant
 
 ------ Benefits and spoiler ----
 Benefits: You grow to incredible size.
-Avantage: Vous atteignez une taille incroyable.
+Avantage: Votre taille et votre allonge augmentent et vous êtes Maladroit 1.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are Medium or smaller.</p>
@@ -17,3 +17,4 @@ Avantage: Vous atteignez une taille incroyable.
 <p><strong>Conditions</strong> Vous êtes de taille Moyenne ou inférieure.</p>
 <hr />
 <p>Vous grandissez de façon incroyable. Vous devenez Grand, agrandissez votre allonge de 1,50 m et gagnez l’état Maladroit 1 jusqu’à ce que votre Rage prenne fin. Votre équipement grandit avec vous.</p>
+<p>@Compendium[pf2e.feat-effects.6VrKQ0PhRXuteusQ]{Effet: Stature de géant}</p>
