--- a/data/feats/class-06-WjEwsu4kkexNvDcN.htm
+++ b/data/feats/class-06-WjEwsu4kkexNvDcN.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: When you succeed at a Recall Knowledge check, you learn an additional fact about the subject.
-Avantage: Lorsque vous réussissez un test de rappel de connaissances, vous apprenez un fait supplémentaire sur le sujet.
+Avantage: Vous souvenir vous donne plus d'informations.
 
 ------ Description (en) ------
 <p>When you succeed at a @Compendium[pf2e.actionspf2e.KygTSeDvsFoSO6HW]{Recall Knowledge} check, you learn an additional fact about the subject. When you critically succeed at a Recall Knowledge check, you can gain even more additional information or context than normal, at the GM's discretion.</p>
