--- a/data/feats/class-06-oUhwrijg4rClCplO.htm
+++ b/data/feats/class-06-oUhwrijg4rClCplO.htm
@@ -1,14 +1,14 @@
 Name: Brutal Bully
 Nom: Cogneur brutal
 PrereqEN: expert in Athletics
-PrereqFR: 
+PrereqFR: expert en Athlétisme
 État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You push your foes around and leave bruises.
-Avantage: Tu bouscules tes ennemis et tu leur laisses des bleus.
+Avantage: Enragé, vous infligez des dégâts lorsque vous obtenez un succès à une manœuvre.
 
 ------ Description (en) ------
 <p>You push your foes around and leave bruises. While raging, when you successfully Disarm, Grapple, Shove, or Trip a foe, you deal that foe bludgeoning damage equal to your Strength modifier; add this to the damage from a critical success to Trip.</p>
 ------ Description (fr) ------
-<p>Vous malmenez vos adversaires et ils ne risquent pas de l’oublier. Quand vous êtes enragé et que vous réussissez à Désarmer, Saisir, Pousser, ou faire un Croc‑en‑jambe à un adversaire, vous lui infligez une quantité de dégâts contondants égale à votre modificateur de Force ; vous ajoutez ces dégâts à ceux que vous infligez en cas de succès critique à un Croc‑en‑jambe.</p>
+<p>Vous malmenez vos adversaires et ils ne risquent pas de l’oublier. Quand vous êtes enragé et que vous réussissez à Désarmer, Saisir, Pousser ou faire un Croc‑en‑jambe à un adversaire, vous lui infligez une quantité de dégâts contondants égale à votre modificateur de Force ; vous ajoutez ces dégâts à ceux que vous infligez en cas de succès critique à un Croc‑en‑jambe.</p>
