--- a/data/feats/class-06-qeLpqH2cMSmIrILV.htm
+++ b/data/feats/class-06-qeLpqH2cMSmIrILV.htm
@@ -1,14 +1,14 @@
 Name: Precise Finisher
-Nom: Botte précise
+Nom: Coup final précis
 PrereqEN: Confident Finisher
 PrereqFR: Coup final assuré
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Even when your foe avoids your Confident Finisher, you can still hit a vital spot.
-Avantage: Même si votre ennemi évite votre Confident Finisher, vous pouvez toujours toucher un point vital.
+Avantage: Vous infligez tous les dégâts de Frappe précise même en cas d'échec avec Coup final assuré.
 
 ------ Description (en) ------
 <p>Even when your foe avoids your Confident Finisher, you can still hit a vital spot. On a failure with Confident Finisher, you apply your full precise strike damage instead of half.</p>
 ------ Description (fr) ------
-<p>Même lorsque votre adversaire évite votre Coup final assuré, vous pouvez toujours atteindre un point vital. En cas d'échec avec Coup final assuré, vous appliquez tous vos dégats de frappe précise au lieu de la moitié.</p>
+<p>Même lorsque votre adversaire évite votre Coup final assuré, vous pouvez toujours atteindre un point vital. En cas d'échec avec Coup final assuré, vous appliquez tous vos dégats de Frappe précise au lieu de la moitié.</p>
