--- a/data/feats/class-06-sv4LeEbkOJyLen10.htm
+++ b/data/feats/class-06-sv4LeEbkOJyLen10.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your bombs impose additional effects on your enemies.
-Avantage: Vos bombes imposent des effets supplémentaires à vos ennemis.
+Avantage: Vos bombes alchimiques imposent des effets supplémentaires à vos ennemis.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
@@ -18,4 +18,5 @@ Avantage: Vos bombes imposent des effets supplémentaires à vos ennemis.
 <p><strong>Fréquence</strong> une fois par round</p>
 <p><strong>Déclencheur</strong> Vous utilisez Alchimie rapide pour fabriquer une bombe alchimique qui est inférieure d’au moins 2 niveaux à votre niveau d’alchimie avancée.</p>
 <hr />
-<p>Vos bombes infligent des effets supplémentaires à vos ennemis. Vous intégrez dans votre bombe une substance qui cause l’un des effets suivants : l’état ébloui, sourd, ou pris au dépourvu, ou un malus de Vitesses de −1,50 m. Si vous réussissez votre attaque avec la bombe, la cible doit réussir un jet de sauvegarde de Vigueur ou se trouver sous l’effet choisi jusqu’au début de votre prochain tour. Ce jet de sauvegarde utilise votre DD de classe (même si quelqu’un d’autre que vous lance la bombe).</p>
+<p>Vos bombes infligent des effets supplémentaires à vos ennemis. Vous intégrez dans votre bombe une substance qui cause l’un des effets suivants : l’état Ébloui, Sourd ou Pris au dépourvu, ou un malus de −1,50 m à toutes les Vitesses.</p>
+<p>Si vous réussissez votre attaque avec la bombe, la cible doit réussir un jet de Vigueur ou se trouver sous l’effet choisi jusqu’au début de votre prochain tour. Ce jet de sauvegarde utilise votre DD de classe (même si quelqu’un d’autre que vous lance la bombe).</p>
