--- a/data/feats/class-06-tpkJXDpSuGznfzGJ.htm
+++ b/data/feats/class-06-tpkJXDpSuGznfzGJ.htm
@@ -1,17 +1,15 @@
 Name: Mature Animal Companion (Ranger)
-Nom: Compagnon animal adulte (Rodeur)
+Nom: Compagnon animal adulte (Rôdeur)
 PrereqEN: |Animal Companion
 PrereqFR: Compagnon animal
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your animal companion grows up, gaining additional capabilities.
-Avantage: Votre compagnon animal grandit et acquiert des capacités supplémentaires.
------- Benefits and spoiler ----
-Avantage: Votre compagnon animal grandit et acquiert des capacités supplémentaires.
+Avantage: Vous obtenez un compagnon animal adulte.
+
 ------ Description (en) ------
 <p>Your animal companion grows up, becoming a mature animal companion and gaining additional capabilities. If you have the @Compendium[pf2e.actionspf2e.JYi4MnsdFu618hPm]{Hunt Prey} action, your animal companion assaults the prey even without your orders.</p>
 <p>During an encounter, even if you don't use the @Compendium[pf2e.actionspf2e.q9nbyIF0PEBqMtYe]{Command an Animal} action, your animal companion can still use 1 action that round on your turn to Stride toward or Strike your prey.</p>
 ------ Description (fr) ------
-<p>Votre compagnon animal a grandi et c’est à présent un adulte, ce qui lui confère des capacités supplémentaires. Si vous connaissez l’action Chasser une proie, votre compagnon animal attaque votre proie sans qu’il soit nécessaire de lui en donner l’ordre. Lors d’une rencontre, même si vous n’effectuez pas l’action Diriger un animal, votre compagnon animal peut toujours effectuer une action à votre tour pour Marcher rapidement vers votre proie ou pour la Frapper.</p>
+<p>Votre compagnon animal a grandi et c’est à présent un adulte, ce qui lui confère des capacités supplémentaires. Si vous connaissez l’action @Compendium[pf2e.actionspf2e.JYi4MnsdFu618hPm]{Chasser une proie}, votre compagnon animal attaque votre proie sans qu’il soit nécessaire de lui en donner l’ordre. Lors d’une rencontre, même si vous n’effectuez pas l’action @Compendium[pf2e.actionspf2e.q9nbyIF0PEBqMtYe]{Diriger un animal}, votre compagnon animal peut toujours effectuer une action à votre tour pour Marcher rapidement vers votre proie ou pour la Frapper.</p>
