--- a/data/feats/class-06-uH3ZRkXPsXi1ChO2.htm
+++ b/data/feats/class-06-uH3ZRkXPsXi1ChO2.htm
@@ -2,8 +2,7 @@ Name: Corrupted Shield
 Nom: Bouclier corrompu
 PrereqEN: divine ally (shield)|tenets of evil
 PrereqFR: Allié divin (bouclier)|préceptes du mal
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your shield ally is more than just a spirit of protection— it's a conduit for deadly divine magic.
@@ -16,6 +15,6 @@ Avantage: Votre bouclier allié devient un conduit pour la magie divine mortelle
 <p>The damage the attacker takes increases to [[/r 2d6 #evil]] at 11th level and [[/r 3d6 #evil]] at 16th level.</p>
 ------ Description (fr) ------
 <p>Votre allié bouclier est plus que juste un esprit de protection — c'est un conduit pour la magie divine mortelle.</p>
-<p>Lorsque vous utilisez votre allié bouclier pour effectuer un @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Blocage au bouclier} contre une Frappe à mains nues de mêlée ou une arme de mêlée d'une créature adjacente, l'attaquant subit [[/r 1d6 #evil]] dégâts mauvais ou négatifs (à votre choix).</p>
+<p>Lorsque vous utilisez votre allié bouclier pour effectuer un @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Blocage au bouclier} contre une Frappe à mains nues de mêlée ou une arme de mêlée d'une créature adjacente, l'attaquant subit [[/r 1d6 #mal]] dégâts mauvais ou négatifs (selon votre choix).</p>
 <p>Si l'attaque ou la Frappe brise ou détruit votre bouclier, doublez ces dégâts supplémentaires.</p>
-<p>Les dégâts que l'attaquant subit augmentent à [[/r 2d6 #evil]] dégâts mauvais au niveau 11 et [[/r 3d6 #evil]] dégâts mauvais au niveau 16.</p>
+<p>Les dégâts que l'attaquant subit passent à [[/r 2d6]] dégâts au niveau 11 et [[/r 3d6]] dégâts au niveau 16.</p>
