--- a/data/feats/class-06-uJpghjJtNbqKUxRd.htm
+++ b/data/feats/class-06-uJpghjJtNbqKUxRd.htm
@@ -2,20 +2,18 @@ Name: Wolf Drag
 Nom: Traction du loup
 PrereqEN: |Wolf Stance
 PrereqFR: Posture du loup
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You rip your enemy off their feet.
-Avantage: Vous fauchez les jambes de votre ennemi.
------- Benefits and spoiler ----
-Avantage: Vous fauchez les jambes de votre ennemi.
+Avantage: Votre Frappe de mâchoire de loup devient fatal d12 et met vos adversaires à terre.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are in @Compendium[pf2e.feats-srd.AN9jY1JVcU20Qdw6]{Wolf Stance}</p>
 <hr />
 <p>You rip your enemy off their feet.</p>
 <p>Make a wolf jaw Strike. Your wolf jaw gains the fatal d12 trait for this Strike, and if the attack succeeds, you knock the target @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{Prone}.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous êtes dans la Posture du loup</p>
+<p><strong>Conditions</strong> Vous êtes dans la @Compendium[pf2e.feats-srd.AN9jY1JVcU20Qdw6]{Posture du loup}</p>
 <hr />
-<p>Vous fauchez les jambes de votre ennemi. Faites une Frappe de mâchoire de loup. Votre Frappe de mâchoire de loup bénéficie du trait fatal d12 et si elle réussit, la cible se retrouve À terre.</p>
+<p>Vous fauchez les jambes de votre ennemi. Faites une Frappe de mâchoire de loup. Votre Frappe de mâchoire de loup bénéficie du trait fatal d12 et si l'attaque est réussie, la cible se retrouve @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}.</p>
