--- a/data/feats/class-06-vWrGwqy4AhHMPz8V.htm
+++ b/data/feats/class-06-vWrGwqy4AhHMPz8V.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You learn to frighten your enemies with your performance.
-Avantage: Vous apprenez à effrayer vos ennemis par vos performances.
+Avantage: Vous apprenez le tour de magie de composition Chant funeste.
 
 ------ Description (en) ------
 <p>You learn the @Compendium[pf2e.spells-srd.1xLVcA8Y1onw7toT]{Dirge of Doom} composition cantrip, which frightens your enemies.</p>
 ------ Description (fr) ------
-<p>Vous apprenez le tour de magie de composition @Compendium[pf2e.spells-srd.1xLVcA8Y1onw7toT]{chant funeste} qui terrorise vos ennemis.</p>
+<p>Vous apprenez le tour de magie de composition @Compendium[pf2e.spells-srd.1xLVcA8Y1onw7toT]{Chant funeste} qui terrorise vos ennemis.</p>
