--- a/data/feats/class-06-vuApM8xHOZs4o6oS.htm
+++ b/data/feats/class-06-vuApM8xHOZs4o6oS.htm
@@ -2,8 +2,11 @@ Name: Spellmaster Dedication
 Nom: Dévouement du Maître des sorts
 PrereqEN: Intelligence, Wisdom or Charisma 14|ability to cast focus spells|member of the Pathfinder Society affiliated with the School of Spells
 PrereqFR: Intelligence, Sagesse ou Charisme 14|capacité à lancer des sorts de focalisation|membre de la Société des Éclaireurs affilié à l'École des sorts
-État: changé
-État d'origine: libre
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous obtenez un bonus pour Identifier les objets et bricolez la résonance de votre guide avec facilité.
 
 ------ Description (en) ------
 <p>As a Spellmaster, you are adept at identifying magic. You gain a +2 circumstance bonus when you Identify Magic with a skill in which you are trained or better. If you have the Wayfinder Resonance Tinkerer feat, you can change the cantrip you chose for that feat each day during your daily preparations.</p>
