--- a/data/feats/class-06-w0nSRBNwexM5Dh0D.htm
+++ b/data/feats/class-06-w0nSRBNwexM5Dh0D.htm
@@ -2,8 +2,7 @@ Name: Whirling Throw
 Nom: Projection en rotation
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You propel your grabbed or restrained foe a great distance.
@@ -20,12 +19,12 @@ Avantage: Vous propulsez votre ennemi saisi ou retenu sur une grande distance.
 <p><strong>Failure</strong> You don't throw the creature.</p>
 <p><strong>Critical Failure</strong> You don't throw the creature, and it's no longer grabbed or restrained by you.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous empoignez ou entravez une créature.</p>
+<p><strong>Conditions</strong> Vous avez une créature @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Saisie} or @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Entravée}.</p>
 <hr />
 <p>Vous projetez votre adversaire empoigné ou entravé. Vous pouvez projeter la créature à une distance maximale de 3 m, plus 1,50 m × votre modificateur de Force. Si vous parvenez à la projeter, elle subit un montant de dégâts contondants égal à votre modificateur de Force plus 1d6 par tranche de 3 m parcourus.</p>
 <p>Effectuez un test d’Athlétisme contre le DD de Vigueur de la créature. Vous subissez un malus de circonstances de −2 à votre test si la cible fait une catégorie de taille de plus que vous et un malus de circonstances de −4 si elle est encore plus grande. Vous bénéficiez d’un bonus de circonstances de +2 à votre test si la cible fait une catégorie de taille de moins que vous et un bonus de circonstances de +4 si elle est encore plus petite.</p>
 <hr />
-<p><strong>Succès critique</strong> Vous projetez la créature à la distance prévue et elle tombe à terre</p>
+<p><strong>Succès critique</strong> Vous projetez la créature à la distance prévue et elle tombe @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}</p>
 <p><strong>Succès</strong> Vous projetez la créature à la distance prévue.</p>
 <p><strong>Échec</strong> Vous ne projetez pas la créature.</p>
-<p><strong>Échec critique</strong> Vous ne projetez pas la créature et vous ne l’empoignez ou ne l’entravez plus.</p>
+<p><strong>Échec critique</strong> Vous ne projetez pas la créature et elle n'est plus ni Entravée, ni Saisie.</p>
