dons de classe 06

--- a/data/feats/class-06-YOU5eCD5S4cS6Qeu.htm
+++ b/data/feats/class-06-YOU5eCD5S4cS6Qeu.htm
@@ -2,8 +2,11 @@ Name: Cascade Bearer's Flexibility
 Nom: Flexibilité des Détenteurs des flots
 PrereqEN: Magaambyan Attendant Dedication|Cascade Bearers affiliation
 PrereqFR: Dévouement de Gardien de Magaambya|affiliation aux Détenteurs des flots
-État: changé
-État d'origine: libre
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous pouvez utiliser un don de métamagie jusqu'à la fin de votre tour.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
