--- a/data/feats/class-06-ZPclfDmiHzEqblry.htm
+++ b/data/feats/class-06-ZPclfDmiHzEqblry.htm
@@ -2,14 +2,12 @@ Name: Animal Skin
 Nom: Cuir animal
 PrereqEN: |Animal Instinct
 PrereqFR: Instinct animal
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your proficiency in unarmored defense increases to expert.
-Avantage: Votre compétence en défense sans armure passe à expert.
------- Benefits and spoiler ----
-Avantage: Votre compétence en défense sans armure passe à expert.
+Avantage: Votre maîtrise en défense sans armure passe à expert et vous obtenez un bonus de circonstances à la CA.
+
 ------ Description (en) ------
 <p>Your proficiency in unarmored defense increases to expert.</p>
 <p>While you are raging and unarmored, your skin transforms into a thick hide. You gain a +2 item bonus to AC (+3 if you have the greater juggernaut class feature). The thickness of your hide gives you a Dexterity modifier cap to your AC of +3. This item bonus to AC is cumulative with armor potency runes on your explorer's clothing, mage armor, and bracers of armor.</p>
