--- a/data/feats/class-06-yUpZcrQHrz4mflKQ.htm
+++ b/data/feats/class-06-yUpZcrQHrz4mflKQ.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your blood resonates with magical energy, mitigating the effects of harmful spells.
-Avantage: Votre sang résonne avec l'énergie magique, atténuant les effets des sorts nuisibles.
+Avantage: Vous dépensez un emplacement de sort pour obtenir une résistance égale à deux fois son niveau contre l'un des types de dégâts de l'effet déclencheur.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You would take acid, cold, electricity, fire, or sonic damage from a spell.</p>
