--- a/data/feats/class-06-XYaaj872JOO9CAws.htm
+++ b/data/feats/class-06-XYaaj872JOO9CAws.htm
@@ -2,20 +2,18 @@ Name: Blazing Talon Surge
 Nom: Déferlement d'ergots enflammés
 PrereqEN: |Rain of Embers Stance
 PrereqFR: Posture de la pluie de charbons ardents
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You rush forward and latch onto your enemy with talons of hungering fire
 Avantage: Vous vous précipitez en avant et vous vous accrochez à votre ennemi avec des serres de feu affamées.
------- Benefits and spoiler ----
-Avantage: Vous vous précipitez en avant et vous vous accrochez à votre ennemi avec des serres de feu affamées.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are in @Compendium[pf2e.feats-srd.rbiMK71SvGZGRLJ1]{Rain of Embers Stance}.</p>
 <hr />
 <p>You rush forward and latch onto your enemy with talons of hungering fire.</p>
 <p>Stride once. If you end your movement within reach of at least one enemy, you can make a fire talon Strike against that enemy that deals an additional [[/r 1d4]] @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Persistent Fire Damage}. If it hits and deals damage, you can attempt an Athletics check to @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Grapple} the creature you hit.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous avez adopté la Posture de la pluie de charbons ardents.</p>
+<p><strong>Conditions</strong> Vous avez adopté la  @Compendium[pf2e.feats-srd.rbiMK71SvGZGRLJ1]{Posture de la pluie de charbons ardents}.</p>
 <hr />
-<p>Vous foncez vers votre ennemi avec des ergots de feu dévorant. @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement} une fois. Si vous terminez votre déplacement à portée d'allonge d'au moins un ennemi, vous pouvez porter une Frappe d'ergot de feu'contre cet ennemi qui inflige <a class="inline-roll roll" title="persistent fire" data-mode="roll" data-flavor="persistent fire" data-formula="1d4"><i class="fas fa-dice-d20"></i>1d4</a> dégâts de feu persistantss supplémentaires. Si elle touche et inflige des dégâts, vous pouvez tenter un test d'Athlétisme pour @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Saisir} la créature que vous avez touchée.</p>
+<p>Vous foncez vers votre ennemi avec des ergots de feu dévorant. @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement} une fois. Si vous terminez votre déplacement à portée d'allonge d'au moins un ennemi, vous pouvez porter une Frappe d'ergot de feu'contre cet ennemi qui inflige [[/r 1d4]] @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{dégâts de feu persistants} supplémentaires. Si elle touche et inflige des dégâts, vous pouvez tenter un test d'Athlétisme pour @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Saisir} la créature que vous avez touchée.</p>
