--- a/data/feats/class-06-z5fUX9jeqfAViOd8.htm
+++ b/data/feats/class-06-z5fUX9jeqfAViOd8.htm
@@ -6,7 +6,7 @@ PrereqFR: qualifié en Athlétisme
 
 ------ Benefits and spoiler ----
 Benefits: You leverage your weight to topple foes that you move.
-Avantage: Vous utilisez votre poids pour faire tomber les ennemis que vous déplacez.
+Avantage: Lorsque vous Poussez une cible, vous pouvez tenter de la faire tomber.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> Your last action was a successful @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Shove}.</p>
