--- a/data/feats/class-06-zZCyJhsaugHB6mZW.htm
+++ b/data/feats/class-06-zZCyJhsaugHB6mZW.htm
@@ -6,11 +6,11 @@ PrereqFR: qualifié en Intimidation
 
 ------ Benefits and spoiler ----
 Benefits: You menace the target, stoking their fears and drawing their attention.
-Avantage: Vous menacez la cible, attisant ses craintes et attirant son attention.
+Avantage: Votre cible subit un malus de statut de -2 contre ses jets de Volonté contre la peur.
 
 ------ Description (en) ------
 <p>You menace the target, stoking their fears and drawing their attention.</p>
 <p>Attempt an Intimidation check against the Will DC of a target within 30 feet. If you succeed, for 1 minute, that target gains a +2 status bonus to Perception checks against you, but they take a -2 status penalty to Will saves against fear effects.</p>
 ------ Description (fr) ------
-<p>Vous menacez la cible, utilisant leur crainte et attirant leur attention.</p>
-<p>Faites un test d'Intimidation contre le DD de Volonté d'une cible à 9 m. Si vous réussissez, pendant 1 minute, cette cible obtient un bonus de statut de +2 aux tests de Perception contre vous, mais elle subit une pénalité de statut de –2 aux jets de Volonté contre less effets de peur.</p>
+<p>Vous menacez la cible, utilisant sa crainte et attirant son attention.</p>
+<p>Faites un test d'Intimidation contre le DD de Volonté d'une cible à 9 m. Si vous réussissez, pendant 1 minute, cette cible obtient un bonus de statut de +2 aux tests de Perception contre vous, mais elle subit une pénalité de statut de –2 aux jets de Volonté contre les effets de peur.</p>
