--- a/data/feats/class-06-zbxqYhmn7KbqR2Sb.htm
+++ b/data/feats/class-06-zbxqYhmn7KbqR2Sb.htm
@@ -2,12 +2,11 @@ Name: Shatter Defenses
 Nom: Briser les défenses
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your offense exploits your enemy’s fear. Make a melee Strike against a frightened creature.
-Avantage: Votre attaque exploite la peur de votre ennemi. Faites une attaque de mêlée contre une créature effrayée.
+Avantage: Votre attaque qui touche une créature Effrayée la Prend au dépourvu.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> A frightened creature is in your melee reach</p>
@@ -18,4 +17,4 @@ Avantage: Votre attaque exploite la peur de votre ennemi. Faites une attaque de 
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Une créature Effrayée est à portée de votre allonge au corps à corps.</p>
 <hr />
-<p>Votre agressivité entretient la terreur de votre ennemi. Faites une Frappe au corps à corps contre une créature Effrayée. Si vous touchez et infligez des dégâts, la cible est prise au dépourvu tant qu’elle conserve son état effrayé. Si la cible est déjà prise au dépourvu à cause de vous quand vous lui infligez des dégâts avec cette Frappe, elle ne peut pas réduire l’intensité de son état effrayé en dessous de 1 jusqu’au début de votre prochain tour.</p>
+<p>Votre agressivité entretient la terreur de votre ennemi. Faites une Frappe au corps à corps contre une créature @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayée}. Si vous touchez et infligez des dégâts, la cible est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu} tant qu’elle conserve son état Effrayé. Si la cible est déjà Prise au dépourvu à cause de vous quand vous lui infligez des dégâts avec cette Frappe, elle ne peut pas réduire l’intensité de son état Effrayé en dessous de 1 jusqu’au début de votre prochain tour.</p>
