--- a/data/feats/class-06-zwEaXGKqnlBTllfE.htm
+++ b/data/feats/class-06-zwEaXGKqnlBTllfE.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You open the power in your blood to your ally's spellcasting, using your magic to boost their range.
-Avantage: Vous ouvrez le pouvoir de votre sang aux sorts de votre allié, en utilisant votre magie pour augmenter leur portée.
+Avantage: Vous pouvez servir de point de départ au sort lancé par un allié.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An ally @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Casts a Spell} and you are within that spell's range.</p>
