dons de classe 08

--- a/data/feats/class-08-0PcVi7eav6PMLOPl.htm
+++ b/data/feats/class-08-0PcVi7eav6PMLOPl.htm
@@ -2,16 +2,15 @@ Name: Channeled Succor
 Nom: Secours canalisé
 PrereqEN: healing font
 PrereqFR: source de guérison
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can remove conditions with divine grace.
-Avantage: Vous pouvez supprimer les conditions avec la grâce divine.
+Avantage: votre Guérison divine peut délivrer des maladies, des malédictions, de la paralysie ou restaurer votre cible
 
 ------ Description (en) ------
 <p>You can remove conditions with divine grace.</p>
 <p>You can sacrifice one @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Heal} spell you've prepared in your extra slots from healing font to cast one of the following spells instead: @Compendium[pf2e.spells-srd.OyFCwQuw8XRazsNr]{Remove Curse}, @Compendium[pf2e.spells-srd.RneiyehRO6f7LP44]{Remove Disease}, @Compendium[pf2e.spells-srd.BCuHKrDeJ4eq53M6]{Remove Paralysis}, or @Compendium[pf2e.spells-srd.SnaLVgxZ9ryUFmUr]{Restoration}. The spell is heightened to the same level as the heal spell you sacrificed.</p>
 ------ Description (fr) ------
 <p>La grâce divine vous permet de supprimer des états nuisibles.</p>
-<p>Vous pouvez sacrifier une guérison préparée dans vos emplacements de sort supplémentaires conférés par la source de guérison pour lancer l’un des sorts suivants à la place : Délivrance des malédictions, Délivrance des maladies, Délivrance de la paralysie ou Restauration. Le sort est intensifié jusqu’au même niveau que celui de la guérison que vous avez sacrifiée.</p>
+<p>Vous pouvez sacrifier une Guérison préparée dans vos emplacements de sort supplémentaires conférés par la source de guérison pour lancer l’un des sorts suivants à la place : @Compendium[pf2e.spells-srd.OyFCwQuw8XRazsNr]{Délivrance des malédictions}, @Compendium[pf2e.spells-srd.RneiyehRO6f7LP44]{Délivrance des maladies}, @Compendium[pf2e.spells-srd.BCuHKrDeJ4eq53M6]{Délivrance de la paralysie} ou @Compendium[pf2e.spells-srd.SnaLVgxZ9ryUFmUr]{Restauration}. Le sort est intensifié jusqu’au même niveau que celui de la Guérison que vous avez sacrifiée.</p>
