--- a/data/feats/class-08-1qJCMbs3zcPMWDux.htm
+++ b/data/feats/class-08-1qJCMbs3zcPMWDux.htm
@@ -1,13 +1,12 @@
 Name: Know-It-All (Bard)
-Nom: Je-sais-tout
+Nom: Je-sais-tout (Barde)
 PrereqEN: enigma muse
 PrereqFR: muse énigmatique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your knowledge of the world expands beyond what you have read.
-Avantage: Votre connaissance du monde s'étend au-delà de ce que vous avez lu.
+Avantage: Vos connaissances vous permettent d'obtenir davantage d'informations.
 
 ------ Description (en) ------
 <p>When you succeed at a Knowledge check, you gain additional information or context. When you critically succeed at a Knowledge check, at the GM's discretion you might gain even more additional information or context than normal.</p>
