--- a/data/feats/class-08-3hhCDWPm021hvicR.htm
+++ b/data/feats/class-08-3hhCDWPm021hvicR.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You pause to recover your raging vigor.
-Avantage: Vous faites une pause pour récupérer votre vigueur rageuse.
+Avantage: Vous faites une pause en restant en rage pour récupérer des points de vie temporaire.
 
 ------ Description (en) ------
 <p>You pause to recover your raging vigor. You gain temporary Hit Points equal to half your level plus your Constitution modifier.</p>
