--- a/data/feats/class-08-1VLOhyq0IFMY2rqh.htm
+++ b/data/feats/class-08-1VLOhyq0IFMY2rqh.htm
@@ -2,12 +2,11 @@ Name: Animal Rage
 Nom: Rage animale
 PrereqEN: 
 PrereqFR: instinct animal
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You transform into your animal.
-Avantage: Vous vous transformez en votre animal.
+Avantage: Vous lancez Forme animale au niveau 3 en conservant vos statistiques.
 
 ------ Description (en) ------
 <p>You transform into your animal.</p>
