--- a/data/feats/class-08-5hUj7glY8YnO5sBI.htm
+++ b/data/feats/class-08-5hUj7glY8YnO5sBI.htm
@@ -2,14 +2,13 @@ Name: Advanced School Spell
 Nom: Sort d'école perfectionné
 PrereqEN: arcane school
 PrereqFR: école arcanique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You gain access to a powerful new school spell depending on your arcane school.
-Avantage: Vous gagnez l'accès à un nouveau sort puissant en fonction de votre école d'arcane.
+Avantage: Vous obtenez un nouveau sort de focalisation de votre école arcanique.
 
 ------ Description (en) ------
 <p>You gain access to a powerful new school spell depending on your arcane school. If you're an abjurer, you gain energy absorption; if you're a conjurer, you gain dimensional steps; if you're a diviner, you gain vigilant eye; if you're an enchanter, you gain dread aura; if you're an evoker, you gain elemental tempest; if you're an illusionist, you gain invisibility cloak; if you're a necromancer, you gain life siphon; and if you're a transmuter, you gain shifting form. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p>Vous avez accès à un nouveau et puissant sort d’école qui dépend de votre école arcanique. Si vous êtes un abjurateur, vous obtenez absorption d’énergie ; si vous êtes un invocateur, vous obtenez pas interdimensionnel ; si vous êtes un devin, vous obtenez œil vigilant ; si vous êtes un enchanteur, vous obtenez aura effroyable ; si vous êtes un évocateur, vous obtenez tempête élémentaire ; si vous êtes un illusionniste, vous obtenez cape d’invisibilité ; si vous êtes un nécromancien, vous obtenez siphon de vie ; si vous êtes un transmutateur, vous obtenez forme changeante. La description de ces sorts figure pages 394‑396. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
+<p>Vous avez accès à un nouveau et puissant sort d’école qui dépend de votre école arcanique. Si vous êtes un abjurateur, vous obtenez Absorption d’énergie ; si vous êtes un invocateur, vous obtenez Pas interdimensionnel ; si vous êtes un devin, vous obtenez Œil vigilant ; si vous êtes un enchanteur, vous obtenez Aura effroyable ; si vous êtes un évocateur, vous obtenez Tempête élémentaire ; si vous êtes un illusionniste, vous obtenez Cape d’invisibilité ; si vous êtes un nécromancien, vous obtenez Siphon de vie ; si vous êtes un transmutateur, vous obtenez Forme changeante. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
